--- a/doc/README.ps
+++ b/doc/README.ps
@@ -4,13 +4,13 @@
 %%Pages: 6
 %%PageOrder: Ascend
 %%BoundingBox: 0 0 596 842
-%%DocumentFonts: Palatino-Roman Courier Palatino-Bold Palatino-Italic
+%%DocumentFonts: Palatino-Roman Courier Palatino-Bold
 %%DocumentPaperSizes: a4
 %%EndComments
 %DVIPSCommandLine: dvips -o /home/karsten/src/Projects/M/doc/README.ps
 %+ README.dvi
 %DVIPSParameters: dpi=300, compressed, comments removed
-%DVIPSSource:  TeX output 1998.05.30:1753
+%DVIPSSource:  TeX output 1998.08.06:2028
 %%BeginProcSet: texc.pro
 /TeXDict 250 dict def TeXDict begin /N{def}def /B{bind def}N /S{exch}N
 /X{S N}B /TR{translate}N /isls false N /vsize 11 72 mul N /hsize 8.5 72
@@ -205,46 +205,44 @@ end definefont 3 -1 roll makefont /setfont load]cvx def}def
 end
 %%EndProcSet
 TeXDict begin 39158280 55380996 1000 300 300 (README.dvi)
-@start /Fa 167[36 1[36 8[47 3[17 2[28 30 39 2[36 1[25
-4[12 58[{ TeXBase1Encoding ReEncodeFont }10 50.000001
-/Palatino-Italic rf /Fb 103[30 30[30 30 30 1[30 30 30
-30 1[30 30 30 30 30 30 30 30 30 30 30 30 30 30 30 30
-1[30 1[30 1[30 30 30 30 3[30 30 30 1[30 30 30 30 30 2[30
-30 30 30 30 30 30 30 30 3[30 2[30 1[30 2[30 2[30 30 30
-30 30 30 1[30 30 30 30 40[{ TeXBase1Encoding ReEncodeFont }61
-50.000001 /Courier rf /Fc 134[33 1[50 1[37 20 27 23 1[37
-33 37 53 20 37 1[20 37 33 23 30 37 27 37 30 9[60 4[43
-2[50 50 1[37 2[23 50 1[33 2[43 13[30 30 30 30 30 1[18
-15 4[20 20 37[37 2[{ TeXBase1Encoding ReEncodeFont }40
-59.999974 /Palatino-Bold rf /Fd 1 16 df<EA03F0EA0FFC487E487E481380A2B512
-C0A86C1380A26C13006C5A6C5AEA03F012147D9519>15 D E /Fe
-107[25 25 25[28 26 42 28 30 16 21 20 28 30 27 29 44 14
-28 12 14 29 28 17 24 30 22 28 25 7[33 33 50 36 39 31
-26 33 1[30 39 41 47 30 2[17 41 1[28 30 39 35 30 39 2[30
-1[30 1[12 3[25 25 25 25 25 25 25 30 12 17 12 30 1[17
-17 14 36[30 2[{ TeXBase1Encoding ReEncodeFont }67 50.000001
-/Palatino-Roman rf /Ff 134[28 25 41 1[30 17 22 19 1[30
-28 30 44 17 2[17 30 28 19 25 30 22 30 25 8[33 50 2[33
-30 1[41 30 41 1[50 30 2[19 2[28 2[36 1[39 9[25 25 25
-25 25 25 25 1[15 12 17 42[30 2[{ TeXBase1Encoding ReEncodeFont }45
-50.000001 /Palatino-Bold rf /Fg 134[40 3[44 24 32 28
-1[44 40 44 64 24 2[24 44 40 28 36 44 32 1[36 12[48 44
-1[60 44 6[28 2[40 2[52 1[56 9[36 36 36 36 36 36 36 46[44
-2[{ TeXBase1Encoding ReEncodeFont }34 71.999998 /Palatino-Bold
-rf /Fh 134[25 1[38 26 27 15 19 18 25 27 25 26 40 13 25
+@start /Fa 103[30 30[30 30 30 1[30 30 30 30 1[30 30 30
+30 30 30 30 30 30 30 30 30 30 30 30 30 1[30 1[30 1[30
+30 30 30 3[30 30 30 1[30 30 30 30 30 2[30 30 30 30 30
+30 30 30 30 3[30 2[30 1[30 2[30 2[30 30 30 30 30 30 1[30
+30 30 30 40[{ TeXBase1Encoding ReEncodeFont }61 50.000001
+/Courier rf /Fb 134[33 1[50 1[37 20 27 23 1[37 33 37
+53 20 37 1[20 37 33 23 30 37 27 37 30 9[60 4[43 2[50
+50 1[37 2[23 50 1[33 2[43 13[30 30 30 30 30 1[18 15 4[20
+20 37[37 2[{ TeXBase1Encoding ReEncodeFont }40 59.999974
+/Palatino-Bold rf /Fc 1 16 df<EA03F0EA0FFC487E487E481380A2B512C0A86C1380
+A26C13006C5A6C5AEA03F012147D9519>15 D E /Fd 103[17 3[25
+25 25[28 26 42 28 30 16 21 20 28 30 27 29 44 14 28 12
+14 29 28 17 24 30 22 28 25 7[33 33 50 36 39 31 26 33
+1[30 39 41 47 30 36 1[17 41 38 28 30 39 35 30 39 6[12
+3[25 25 25 25 25 25 25 30 12 17 12 30 1[17 17 14 35[30
+30 2[{ TeXBase1Encoding ReEncodeFont }69 50.000001 /Palatino-Roman
+rf /Fe 134[28 25 41 1[30 17 22 19 1[30 28 30 44 17 2[17
+30 28 19 25 30 22 30 25 8[33 50 2[33 30 1[41 30 41 1[50
+30 2[19 2[28 2[36 1[39 9[25 25 25 25 25 25 25 1[15 12
+17 42[30 2[{ TeXBase1Encoding ReEncodeFont }45 50.000001
+/Palatino-Bold rf /Ff 134[40 3[44 24 32 28 1[44 40 44
+64 24 2[24 44 40 28 36 44 32 1[36 12[48 44 1[60 44 6[28
+2[40 2[52 1[56 9[36 36 36 36 36 36 36 46[44 2[{
+ TeXBase1Encoding ReEncodeFont }34 71.999998 /Palatino-Bold
+rf /Fg 134[25 1[38 26 27 15 19 18 25 27 25 26 40 13 25
 1[13 26 1[15 22 28 20 25 23 12[28 6[43 3[15 26[11 46[{
  TeXBase1Encoding ReEncodeFont }26 45.624988 /Palatino-Roman
-rf /Fi 139[15 20 18 14[20 28 23 31[35 65[{
+rf /Fh 139[15 20 18 14[20 28 23 31[35 65[{
  TeXBase1Encoding ReEncodeFont }7 45.624988 /Palatino-Bold
-rf /Fj 138[36 36 36 36 1[36 36 36 36 36 3[36 36 1[36
+rf /Fi 138[36 36 36 36 1[36 36 36 36 36 3[36 36 1[36
 36 2[36 30[36 1[36 5[36 10[36 36 1[36 44[{
  TeXBase1Encoding ReEncodeFont }20 59.999974 /Courier
-rf /Fk 3[36 130[33 4[19 25 24 3[35 1[17 3[35 2[29 37
-2[30 19[57 1[43 8[37 8[30 30 4[30 1[30 30 6[20 20 40[{
+rf /Fj 3[36 134[36 19 25 24 3[35 1[17 3[35 33 1[29 37
+2[30 21[43 8[37 47 7[30 30 1[30 4[30 7[20 20 40[{
  TeXBase1Encoding ReEncodeFont }21 59.999974 /Palatino-Roman
-rf /Fl 139[28 37 3[47 2[25 6[41 3[43 14[58 3[72 32[29
+rf /Fk 139[28 37 3[47 2[25 6[41 3[43 14[58 3[72 32[29
 45[{ TeXBase1Encoding ReEncodeFont }9 86.416689 /Palatino-Roman
-rf /Fm 178[81 77[{ .167 SlantFont TeXBase1Encoding ReEncodeFont }1
+rf /Fl 178[81 77[{ .167 SlantFont TeXBase1Encoding ReEncodeFont }1
 86.416689 /Palatino-Roman rf end
 %%EndProlog
 %%BeginSetup
@@ -257,247 +255,266 @@ a4
 
 %%EndSetup
 %%Page: 1 1
-1 0 bop 568 407 a Fm(M)31 b Fl(-)22 b(Release)f(Notes)725
-556 y Fk(Karsten)15 b(Ball\374der)85 631 y(\()p Fj(Ballueder@usa.net,)
-33 b(http://Ballueder.home.ml.org)o Fk(\))723 751 y(30th)15
-b(May)g(1998)828 936 y Fi(Abstract)250 1023 y Fh(This)d(document)g(is)g
-(a)f(set)h(of)f(notes)h(about)f(how)h(to)f(compile)h(and)g(install)g
-(M.)g(It)182 1080 y(also)f(covers)g(some)h(fr)o(equently)h(asked)e
-(questions.)60 1253 y Fg(Contents)60 1367 y Ff(1)50 b(Introduction)1323
-b(1)60 1477 y(2)50 b(Compilation)11 b(notes)1188 b(1)135
-1537 y Fe(2.1)52 b(Operating)13 b(systems)f(speci\002c)20
-b(.)25 b(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)
-f(.)g(.)h(.)f(.)h(.)91 b(1)249 1597 y(2.1.1)61 b(Linux)20
-b(.)25 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)
-g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
-b(1)249 1657 y(2.1.2)61 b(Solaris/SunOS)46 b(.)26 b(.)f(.)g(.)h(.)f(.)g
-(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)
-91 b(2)249 1718 y(2.1.3)61 b(Micr)o(osoft)13 b(W)m(indows)52
-b(.)26 b(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)
-g(.)h(.)f(.)h(.)91 b(2)135 1778 y(2.2)52 b(Other)13 b(issues/libraries)
-h(.)25 b(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)
-f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(2)249 1838 y(2.2.1)61
-b(STL)25 b(.)g(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f
-(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
-b(2)249 1898 y(2.2.2)61 b(C-client)13 b(library)40 b(.)26
-b(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h
-(.)f(.)g(.)h(.)f(.)h(.)91 b(2)249 1958 y(2.2.3)61 b(Python)27
-b(.)f(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h
+1 0 bop 568 407 a Fl(M)31 b Fk(-)22 b(Release)f(Notes)725
+556 y Fj(Karsten)15 b(Ball\374der)85 631 y(\()p Fi(Ballueder@usa.net,)
+33 b(http://Ballueder.home.ml.org)o Fj(\))700 751 y(6th)15
+b(August)h(1998)828 936 y Fh(Abstract)250 1023 y Fg(This)c(document)g
+(is)g(a)f(set)h(of)f(notes)h(about)f(how)h(to)f(compile)h(and)g
+(install)g(M.)g(It)182 1080 y(also)f(covers)g(some)h(fr)o(equently)h
+(asked)e(questions.)60 1253 y Ff(Contents)60 1367 y Fe(1)50
+b(Introduction)1323 b(1)60 1477 y(2)50 b(Compilation)11
+b(notes)1188 b(2)135 1537 y Fd(2.1)52 b(Operating)13
+b(systems)f(speci\002c)20 b(.)25 b(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h
 (.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(2)249
-2019 y(2.2.4)61 b(XFaces)33 b(.)26 b(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)
-f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f
-(.)h(.)91 b(2)60 2129 y Ff(3)50 b(Installation)1346 b(3)135
-2189 y Fe(3.1)52 b(Con\002guration)14 b(and)e(Compilation)25
-b(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f
-(.)h(.)91 b(3)60 2299 y Ff(4)50 b(Con\002guration)12
-b(and)i(T)-6 b(esting)1015 b(3)135 2359 y Fe(4.1)52 b(Con\002guration)
-14 b(settings)40 b(.)26 b(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h
-(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(3)135
-2419 y(4.2)52 b(Reading)13 b(mail/news)20 b(.)25 b(.)g(.)h(.)f(.)g(.)h
+1597 y(2.1.1)61 b(Linux)20 b(.)25 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h
 (.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)
-f(.)h(.)91 b(3)135 2479 y(4.3)52 b(W)l(riting)13 b(mail/news)36
+f(.)h(.)91 b(2)249 1657 y(2.1.2)61 b(Solaris/SunOS)46
+b(.)26 b(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)
+g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(2)249 1718 y(2.1.3)61
+b(Micr)o(osoft)13 b(W)m(indows)52 b(.)26 b(.)f(.)g(.)h(.)f(.)h(.)f(.)g
+(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
+b(2)135 1778 y(2.2)52 b(Other)13 b(issues/libraries)h(.)25
+b(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g
+(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(2)249 1838 y(2.2.1)61
+b(C-client)13 b(library)40 b(.)26 b(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f
+(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
+b(2)249 1898 y(2.2.2)61 b(Python)27 b(.)f(.)f(.)h(.)f(.)g(.)h(.)f(.)g
+(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)
+h(.)f(.)h(.)91 b(3)249 1958 y(2.2.3)61 b(XFaces)33 b(.)26
+b(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f
+(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(3)60
+2068 y Fe(3)50 b(Installation)1346 b(3)135 2129 y Fd(3.1)52
+b(Con\002guration)14 b(and)e(Compilation)25 b(.)g(.)h(.)f(.)h(.)f(.)g
+(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
+b(3)60 2239 y Fe(4)50 b(Con\002guration)12 b(and)i(T)-6
+b(esting)1015 b(3)135 2299 y Fd(4.1)52 b(Con\002guration)14
+b(settings)40 b(.)26 b(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f
+(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(3)135
+2359 y(4.2)52 b(Reading)13 b(mail/news)20 b(.)25 b(.)g(.)h(.)f(.)g(.)h
+(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)
+f(.)h(.)91 b(4)135 2419 y(4.3)52 b(W)l(riting)13 b(mail/news)36
 b(.)25 b(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)
-h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(3)903 2856 y(1)p
-eop
-%%Page: 2 2
-2 1 bop 60 203 a Ff(5)50 b(Scripting)12 b(and)i(Python)e(integration)
-861 b(4)135 264 y Fe(5.1)52 b(Intr)o(oduction)33 b(.)25
+h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(4)60 2529 y
+Fe(5)50 b(Scripting)12 b(and)i(Python)e(integration)861
+b(4)135 2589 y Fd(5.1)52 b(Intr)o(oduction)33 b(.)25
 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h
 (.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(4)135
-324 y(5.2)52 b(Initialisation)34 b(.)25 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f
+2650 y(5.2)52 b(Initialisation)34 b(.)25 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f
 (.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)
-g(.)h(.)f(.)h(.)91 b(4)135 384 y(5.3)52 b(Callback)13
+g(.)h(.)f(.)h(.)91 b(4)135 2710 y(5.3)52 b(Callback)13
 b(Functions)h(\(Hooks\))33 b(.)26 b(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f
-(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(4)135
-444 y(5.4)52 b(Namespaces)32 b(.)25 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g
-(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)
-h(.)f(.)h(.)91 b(4)135 504 y(5.5)52 b(List)14 b(of)e(Callbacks)21
-b(.)k(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f
-(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(5)60
-614 y Ff(6)50 b(Further)13 b(Information)1153 b(5)60
-724 y(7)50 b(F)m(AQ)1505 b(5)60 893 y Fg(1)72 b(Introduction)60
-1007 y Fe(M)18 b(is)g(intended)h(to)f(be)f(a)h(powerful)e(mail)j(and)f
-(news)f(client.)33 b(The)17 b(following)h(points)60 1067
-y(wer)o(e)11 b(signi\002cant)j(in)f(the)g(development)g(of)f(it)133
-1149 y Fd(\017)24 b Fe(it)13 b(should)h(have)e(an)h(easy)f(to)g(use)h
-(graphical)g(user)f(interface)133 1242 y Fd(\017)24 b
-Fe(it)13 b(should)g(be)e(powerful,)h(being)g(able)g(to)g(r)o(eplace)g
-(awkwar)o(d)f(tools)i(such)f(as)g(pr)o(oc-)182 1302 y(mail,)i(thus)f
-(it)g(must)g(have)f(a)g(built)i(in)f(scripting)g(language)133
-1396 y Fd(\017)24 b Fe(it)14 b(should)h(have)f(full)g(support)g(for)f
+(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(4)903
+2856 y(1)p eop
+%%Page: 2 2
+2 1 bop 135 203 a Fd(5.4)52 b(Namespaces)32 b(.)25 b(.)h(.)f(.)h(.)f(.)
+g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g
+(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(5)135 264 y(5.5)52 b(List)14
+b(of)e(Callbacks)21 b(.)k(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f
+(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
+b(5)60 374 y Fe(6)50 b(Further)13 b(Information)1153
+b(5)60 484 y(7)50 b(F)m(AQ)1505 b(5)60 657 y Ff(1)72
+b(Introduction)60 771 y Fd(M)18 b(is)g(intended)h(to)f(be)f(a)h
+(powerful)e(mail)j(and)f(news)f(client.)33 b(The)17 b(following)h
+(points)60 831 y(wer)o(e)11 b(signi\002cant)j(in)f(the)g(development)g
+(of)f(it)133 945 y Fc(\017)24 b Fd(it)13 b(should)h(have)e(an)h(easy)f
+(to)g(use)h(graphical)g(user)f(interface)133 1047 y Fc(\017)24
+b Fd(it)13 b(should)g(be)f(as)g(powerful)g(and)g(extensible)h(as)f
+(possible,)i(being)d(able)h(to)h(r)o(eplace)182 1107
+y(awkwar)o(d)j(tools)i(such)f(as)g(pr)o(ocmail,)j(thus)d(it)h(must)f
+(have)g(a)g(built)h(in)f(scripting)182 1167 y(language)133
+1269 y Fc(\017)24 b Fd(it)14 b(should)h(have)f(full)g(support)g(for)f
 (a)h(wide)g(range)f(of)g(standar)o(ds,)j(including)f(full)182
-1456 y(MIME)e(support)133 1550 y Fd(\017)24 b Fe(it)13
-b(should)h(run)e(on)g(a)h(wide)f(variety)h(of)f(systems)h(</enum>)60
-1718 y Fg(2)72 b(Compilation)16 b(notes)60 1847 y Fc(2.1)59
-b(Operating)14 b(systems)g(speci\002c)60 1942 y Ff(2.1.1)50
-b(Linux)60 2037 y Fe(If)9 b(compiling)i(with)e(a)h(non-default)g
-(compiler)g(like)g(egcs,)g(make)f(sur)o(e)g(that)h Fb(/usr/include)60
-2097 y Fe(is)j(not)g(in)g(the)f(include)i(path,)f(neither)g(should)h
-Fb(/usr/lib)d Fe(be)h(explicitly)i(listed.)60 2229 y
-Ff(2.1.2)50 b(Solaris/SunOS)60 2324 y Fe(M)17 b(has)g(been)f
-(successfully)h(compiled)i(with)e Fb(gcc-2.8.0)e Fe(on)i(Solaris.)30
-b(Curr)o(ently)17 b(it)60 2384 y(does)c(not)g(compile)g(with)g(the)g
-(standar)o(d)g Fb(C++)f Fe(compiler)l(.)60 2516 y Ff(2.1.3)50
-b(Microsoft)12 b(W)n(indows)60 2611 y Fe(M)17 b(can)f(be)g(compiled)i
-(under)e(W)m(indows,)j(using)e(wxW)m(indows)f(V)-6 b(ersion)17
-b(2.0)g(and)g(Mi-)60 2671 y(cr)o(osoft)c(V)m(isual)g(C++.)133
-2731 y Fa(FIXME:)g(V)-10 b(ADIM?)903 2856 y Fe(2)p eop
+1329 y(and)e(intuitive)h(MIME)f(support)133 1431 y Fc(\017)24
+b Fd(it)16 b(should)g(interact)g(with)f(other)g(pr)o(ograms)f
+(intuitively)-6 b(,)19 b(sending)d(MIME)f(mails)182 1491
+y(should)i(be)e(as)h(easy)f(as)h(dr)o(opping)g(\002les)g(fr)o(om)g(a)f
+(\002le)i(manager)d(in)j(the)e(message)182 1551 y(window)133
+1653 y Fc(\017)24 b Fd(it)13 b(should)h(run)e(on)g(a)h(wide)f(variety)h
+(of)f(systems)60 1826 y Ff(2)72 b(Compilation)16 b(notes)60
+1954 y Fb(2.1)59 b(Operating)14 b(systems)g(speci\002c)60
+2050 y Fe(2.1.1)50 b(Linux)60 2145 y Fd(If)9 b(compiling)i(with)e(a)h
+(non-default)g(compiler)g(like)g Fa(egcs)p Fd(,)g(make)f(sur)o(e)g
+(that)h Fa(/usr/include)60 2205 y Fd(is)i(not)g(in)g(the)g(include)h
+(path,)f(neither)g(should)h Fa(/usr/lib)e Fd(be)g(explicitly)i(listed.)
+k(M)12 b(has)60 2265 y(been)h(compiled)j(with)f Fa(egcs)e
+Fd(and)i Fa(gcc-2.8.x)e Fd(on)i(both,)g Fa(libc5)e Fd(and)i
+Fa(glibc2)e Fd(sys-)60 2325 y(tems.)60 2461 y Fe(2.1.2)50
+b(Solaris/SunOS)60 2557 y Fd(M)17 b(has)g(been)f(successfully)h
+(compiled)i(with)e Fa(gcc-2.8.0)e Fd(on)i(Solaris.)30
+b(Curr)o(ently)17 b(it)60 2617 y(does)c(not)g(compile)g(with)g(the)g
+(standar)o(d)g Fa(C++)f Fd(compiler)l(.)903 2856 y(2)p
+eop
 %%Page: 3 3
-3 2 bop 60 203 a Fc(2.2)59 b(Other)15 b(issues/libraries)60
-299 y Ff(2.2.1)50 b(STL)60 394 y Fe(M)10 b(uses)f(the)h(STL,)g(so)g
-(you)f(need)h(a)f(suf)o(\002ciently)h(r)o(ecent)g(compiler)l(,)h(i.e.)
-16 b Fb(egcs)9 b Fe(or)g Fb(gcc-2.8)p Fe(.)60 530 y Ff(2.2.2)50
-b(C-client)12 b(library)60 625 y Fe(The)g Fb(c-client)29
-b(library)11 b Fe(is)j(r)o(equir)o(ed)e(and)h(is)g(available)g(fr)o(om)
-60 685 y Fb(ftp://ftp.cac.washington.edu/ima)o(p/imap.ta)o(r.Z)p
-Fe(.)7 b(Befor)o(e)i(compiling)60 746 y(it)k(with)g(M,)g(you)f(need)h
-(to)g(patch)f(it.)133 806 y(Unpack)17 b(the)h(ar)o(chive)f(in)h(the)g
-(main)g(M)f(dir)o(ectory)-6 b(,)21 b(then)c(change)g(into)i(the)e(IMAP)
-60 866 y(dir)o(ectory)i(and)g(try)f(a)g(\002rst)g Fb(make)p
-Fe(,)i(i.e.)35 b(a)18 b Fb(make)30 b(linux)17 b Fe(or)i
-Fb(make)29 b(gso)p Fe(.)k(This)19 b(will)60 926 y(cr)o(eate)11
-b(a)h(sour)o(ce)g(dir)o(ectory)g Fb(c-client)f Fe(with)g(lots)i(of)f
-(links)g(to)g(other)g(sour)o(ce)f(\002les)i(in)f(it.)133
-986 y(Then)18 b(install)j(the)e Fb(rfc822.c.patch)e Fe(on)i(c-client's)
-g Fb(rfc822.c)f Fe(\002le)i(fr)o(om)e(the)60 1047 y Fb(extra/patches)11
-b Fe(subdir)o(ectory)h(of)g(M)g(and)h(run)e(the)h Fb(c-client++)f
-Fe(script)i(fr)o(om)f(the)60 1107 y Fb(extra/scripts)i
-Fe(subdir)o(ectory)i(in)g(the)f(c-client)h(sour)o(ce)g(dir)o(ectory)-6
-b(,)18 b(which)d(will)i(r)o(e-)60 1167 y(name)e(variables)h(in)g(the)g
+3 2 bop 60 203 a Fe(2.1.3)50 b(Microsoft)12 b(W)n(indows)60
+299 y Fd(M)17 b(can)f(be)g(compiled)i(under)e(W)m(indows,)j(using)e
+(wxW)m(indows)f(V)-6 b(ersion)17 b(2.0)g(and)g(Mi-)60
+359 y(cr)o(osoft)c(V)m(isual)g(C++.)60 509 y Fb(2.2)59
+b(Other)15 b(issues/libraries)60 605 y Fe(2.2.1)50 b(C-client)12
+b(library)60 700 y Fd(A)18 b(copy)g(of)g(the)g Fa(c-client)29
+b(library)17 b Fd(is)i(r)o(equir)o(ed)f(and)h(is)f(included)i(with)f
+(the)f(M)60 760 y(sour)o(ces.)e(It)d(is)g(available)g(separately)f(fr)o
+(om)60 820 y Fa(ftp://ftp.cac.washington.edu/ima)o(p/imap.ta)o(r.Z)p
+Fd(.)7 b(Befor)o(e)i(compiling)60 881 y(it)k(with)g(M,)g(you)f(need)h
+(to)g(patch)f(it.)133 941 y(The)18 b(following)h(information)f(only)h
+(applies)g(if)f(you)g(use)g(a)g(separate)g Fa(c-client)60
+1001 y Fd(library)12 b(sour)o(ce:)133 1061 y(Unpack)17
+b(the)h(ar)o(chive)f(in)h(the)g(main)g(M)f(dir)o(ectory)-6
+b(,)21 b(then)c(change)g(into)i(the)e(IMAP)60 1121 y(dir)o(ectory)i
+(and)g(try)f(a)g(\002rst)g Fa(make)p Fd(,)i(i.e.)35 b(a)18
+b Fa(make)30 b(linux)17 b Fd(or)i Fa(make)29 b(gso)p
+Fd(.)k(This)19 b(will)60 1181 y(cr)o(eate)11 b(a)h(sour)o(ce)g(dir)o
+(ectory)g Fa(c-client)f Fd(with)g(lots)i(of)f(links)g(to)g(other)g
+(sour)o(ce)f(\002les)i(in)f(it.)133 1242 y(Then)18 b(install)j(the)e
+Fa(rfc822.c.patch)e Fd(on)i(c-client's)g Fa(rfc822.c)f
+Fd(\002le)i(fr)o(om)e(the)60 1302 y Fa(extra/patches)11
+b Fd(subdir)o(ectory)h(of)g(M)g(and)h(run)e(the)h Fa(c-client++)f
+Fd(script)i(fr)o(om)f(the)60 1362 y Fa(extra/scripts)i
+Fd(subdir)o(ectory)i(in)g(the)f(c-client)h(sour)o(ce)g(dir)o(ectory)-6
+b(,)18 b(which)d(will)i(r)o(e-)60 1422 y(name)e(variables)h(in)g(the)g
 (c-client)g(code)g(to)g(make)f(it)h(C++)h(compliant.)26
-b(If)15 b(ther)o(e)g(is)h(any)60 1227 y(pr)o(oblem,)k(it)f(helps)g(to)f
-(edit)h(the)g Fb(CCTYPE)e Fe(or)h Fb(CFLAGS)g Fe(\002les.)34
-b(After)17 b(cr)o(eation)i(of)f(the)60 1287 y(library)12
-b Fb(c-client.a)p Fe(,)g(all)h(object)f(\002les)h(can)g(be)f(deleted.)
-60 1423 y Ff(2.2.3)50 b(Python)60 1519 y Fb(configure)9
-b Fe(looks)i(for)e(Python)i(in)f Fb(/usr/local/src/Python-1.5)p
-Fe(.)j(If)c(your)h(Py-)60 1579 y(thon)15 b(is)h(installed)h(in)e(a)g
+b(If)15 b(ther)o(e)g(is)h(any)60 1482 y(pr)o(oblem,)k(it)f(helps)g(to)f
+(edit)h(the)g Fa(CCTYPE)e Fd(or)h Fa(CFLAGS)g Fd(\002les.)34
+b(After)17 b(cr)o(eation)i(of)f(the)60 1543 y(library)12
+b Fa(c-client.a)p Fd(,)g(all)h(object)f(\002les)h(can)g(be)f(deleted.)
+60 1679 y Fe(2.2.2)50 b(Python)60 1774 y Fa(configure)9
+b Fd(looks)i(for)e(Python)i(in)f Fa(/usr/local/src/Python-1.5)p
+Fd(.)j(If)c(your)h(Py-)60 1834 y(thon)15 b(is)h(installed)h(in)e(a)g
 (dif)o(fer)o(ent)g(location,)j(change)c(the)h(variable)g
-Fb(PYTHON_PATH)f Fe(at)60 1639 y(the)f(beginning)f(of)g
-Fb(configure)p Fe(.)60 1775 y Ff(2.2.4)50 b(XFaces)60
-1870 y Fe(If)19 b(you)g(have)g(the)g Fb(compface)f Fe(library)h(and)g
+Fa(PYTHON_PATH)f Fd(at)60 1894 y(the)f(beginning)f(of)g
+Fa(configure)p Fd(.)60 2030 y Fe(2.2.3)50 b(XFaces)60
+2126 y Fd(If)19 b(you)g(have)g(the)g Fa(compface)f Fd(library)h(and)g
 (header)g(\002le)h(installed,)j(it)d(will)g(be)f(used)60
-1931 y(to)g(support)f(XFaces.)34 b(T)-5 b(o)18 b(install)j(it,)g
+2186 y(to)g(support)f(XFaces.)34 b(T)-5 b(o)18 b(install)j(it,)g
 (unpack)d(it)h(under)f(the)h(main)f(M)h(dir)o(ectory)g(and)60
-1991 y(apply)13 b(the)f(patch)h Fb(compface.patch)e Fe(fr)o(om)h(the)h
-Fb(extra/patches)e Fe(dir)o(ectory)i(to)g(its)60 2051
+2246 y(apply)13 b(the)f(patch)h Fa(compface.patch)e Fd(fr)o(om)h(the)h
+Fa(extra/patches)e Fd(dir)o(ectory)i(to)g(its)60 2306
 y(sour)o(ces.)31 b(Compile)19 b(it)f(and)g(link)g(its)h(header)e(and)h
-(library)f(to)h(the)f Fb(extra/include)60 2111 y Fe(and)c
-Fb(extra/lib)e Fe(dir)o(ectories.)60 2284 y Fg(3)72 b(Installation)60
-2413 y Fc(3.1)59 b(Con\002guration)14 b(and)g(Compilation)60
-2508 y Fe(Follow)f(these)g(steps:)120 2622 y(1.)25 b(Edit)14
-b Fb(configure)c Fe(so)j(it)f(will)h(\002nd)g(your)f(installation)i(of)
-e(Python.)k(If)11 b(you)h(do)h(not)182 2682 y(have)f(it,)i(just)e(skip)
-h(this)g(step.)903 2856 y(3)p eop
+(library)f(to)h(the)f Fa(extra/include)60 2366 y Fd(and)c
+Fa(extra/lib)e Fd(dir)o(ectories.)903 2856 y(3)p eop
 %%Page: 4 4
-4 3 bop 120 203 a Fe(2.)25 b(Run)13 b Fb(configure)f
-Fe(to)h(cr)o(eate)f(the)h Fb(include/config.h)e Fe(and)i
-Fb(makeopts)f Fe(\002le.)182 264 y(It)g(may)g(be)g(r)o(equir)o(ed)h(to)
-g(edit)g Fb(makeopts)f Fe(by)g(hand.)120 365 y(3.)25
-b(Run)15 b Fb(make)29 b(dep)14 b Fe(and)h Fb(cd)29 b(src)14
-b Fe(and)h Fb(make)f Fe(to)h(compile)g(and)g(link)g(M.)g(Compil-)182
-425 y(ing)c(some)g(of)g(the)h(sour)o(ce)f(\002les)h(will)g(take)e(an)h
-(enormous)h(amount)f(of)g(memory)-6 b(,)12 b(so)182 486
-y(make)g(sur)o(e)g(you)g(have)h(enough)f(virtual)h(memory)-6
-b(.)60 659 y Fg(4)72 b(Con\002guration)16 b(and)h(T)-8
-b(esting)60 787 y Fc(4.1)59 b(Con\002guration)14 b(settings)60
-882 y Fe(Under)e(Unix)g(all)h(con\002guration)g(settings)g(ar)o(e)e
-(stor)o(ed)i(in)g Fb(\230/.M/config)e Fe(under)h(W)m(in-)60
-943 y(dows)e(in)h(the)f(r)o(egistry)-6 b(.)15 b(T)-5
-b(o)10 b(get)f(an)h(overview)g(over)g(all)h(possible)f(con\002guration)
-h(options)60 1003 y(and)j(their)h(default)g(values,)g(set)g(the)f
-(value)g Fb(RecordDefaults=1)p Fe(.)20 b(Under)13 b(Unix,)i(do)60
-1063 y(this)e(by)f(cr)o(eating)h(a)f(new)g Fb(\230/.M/config)f
-Fe(\002le)i(containig)g(the)g(lines)133 1123 y Fb([M])133
-1183 y(RecordDefaults=1)133 1244 y Fe(After)18 b(running)g(M,)h(this)h
-(\002le)f(will)h(then)f(contain)g(all)h(default)f(settings.)36
-b(Most)19 b(of)60 1304 y(them)11 b(ar)o(e)g(easily)h(understood.)k
-(Otherwise,)c(the)f(\002le)h Fb(include/Mdefaults.h)d
-Fe(con-)60 1364 y(tains)k(them)g(all)g(with)g(some)f(short)h(comments.)
-60 1515 y Fc(4.2)59 b(Reading)15 b(mail/news)60 1610
-y Fe(T)-5 b(o)12 b(r)o(ead)f(news,)h(you)g(need)f(to)i(open)e(a)h
-(folder)l(.)k(The)11 b(default)h(incoming)h(mail)f(folder)g(has)60
-1670 y(the)h(name)g Fb(INBOX)p Fe(.)g(Any)g(other)g(name)g(will)h(be)f
-(interpr)o(eted)h(as)f(a)g(\002lename)h(r)o(elative)g(to)60
-1730 y(the)f(folder)f(dir)o(ectory)-6 b(.)60 1881 y Fc(4.3)59
-b(W)l(riting)15 b(mail/news)60 1976 y Fe(Befor)o(e)c(being)h(able)f(to)
-i(send)f(mail,)h(you)f(need)g(to)g(con\002gur)o(e)f(the)h
-Fb(MailHost)f Fe(setting)i(to)60 2036 y(tell)h(it)f(wher)o(e)e(to)i
-(send)g(the)g(mail.)60 2209 y Fg(5)72 b(Scripting)16
-b(and)i(Python)f(integration)60 2338 y Fc(5.1)59 b(Introduction)60
-2433 y Fe(M)16 b(uses)g(Python)h(as)f(an)f(embedded)i(scripting)g
-(language.)26 b(A)16 b(lar)o(ge)f(number)h(of)f(user)60
-2493 y(de\002nable)20 b(callback)g(functions)g(ar)o(e)g(available.)38
-b(Scripts)20 b(have)g(access)g(most)g(objects)60 2553
-y(living)14 b(in)f(M.)903 2856 y(4)p eop
+4 3 bop 60 205 a Ff(3)72 b(Installation)60 334 y Fb(3.1)59
+b(Con\002guration)14 b(and)g(Compilation)60 429 y Fd(Follow)f(these)g
+(steps:)120 543 y(1.)25 b(Edit)14 b Fa(configure)c Fd(so)j(it)f(will)h
+(\002nd)g(your)f(installation)i(of)e(Python.)k(If)11
+b(you)h(do)h(not)182 603 y(have)f(it,)i(just)e(skip)h(this)g(step.)120
+705 y(2.)25 b(Run)13 b Fa(configure)f Fd(to)h(cr)o(eate)f(the)h
+Fa(include/config.h)e Fd(and)i Fa(makeopts)f Fd(\002le.)182
+765 y(It)g(may)g(be)g(r)o(equir)o(ed)h(to)g(edit)g Fa(makeopts)f
+Fd(by)g(hand.)120 867 y(3.)25 b(Run)15 b Fa(make)29 b(dep)14
+b Fd(and)h Fa(cd)29 b(src)14 b Fd(and)h Fa(make)f Fd(to)h(compile)g
+(and)g(link)g(M.)g(Compil-)182 927 y(ing)c(some)g(of)g(the)h(sour)o(ce)
+f(\002les)h(will)g(take)e(an)h(enormous)h(amount)f(of)g(memory)-6
+b(,)12 b(so)182 987 y(make)g(sur)o(e)g(you)g(have)h(enough)f(virtual)h
+(memory)-6 b(.)60 1161 y Ff(4)72 b(Con\002guration)16
+b(and)h(T)-8 b(esting)60 1289 y Fb(4.1)59 b(Con\002guration)14
+b(settings)60 1384 y Fd(Under)e(Unix)g(all)h(con\002guration)g
+(settings)g(ar)o(e)e(stor)o(ed)i(in)g Fa(\230/.M/config)e
+Fd(under)h(W)m(in-)60 1444 y(dows)e(in)h(the)f(r)o(egistry)-6
+b(.)15 b(T)-5 b(o)10 b(get)f(an)h(overview)g(over)g(all)h(possible)f
+(con\002guration)h(options)60 1505 y(and)j(their)h(default)g(values,)g
+(set)g(the)f(value)g Fa(RecordDefaults=1)p Fd(.)20 b(Under)13
+b(Unix,)i(do)60 1565 y(this)e(by)f(cr)o(eating)h(a)f(new)g
+Fa(\230/.M/config)f Fd(\002le)i(containig)g(the)g(lines)133
+1625 y Fa([M])133 1685 y(RecordDefaults=1)133 1745 y
+Fd(After)18 b(running)g(M,)h(this)h(\002le)f(will)h(then)f(contain)g
+(all)h(default)f(settings.)36 b(Most)19 b(of)60 1806
+y(them)11 b(ar)o(e)g(easily)h(understood.)k(Otherwise,)c(the)f(\002le)h
+Fa(include/Mdefaults.h)d Fd(con-)60 1866 y(tains)k(them)g(all)g(with)g
+(some)f(short)h(comments.)60 2016 y Fb(4.2)59 b(Reading)15
+b(mail/news)60 2112 y Fd(T)-5 b(o)12 b(r)o(ead)f(news,)h(you)g(need)f
+(to)i(open)e(a)h(folder)l(.)k(The)11 b(default)h(incoming)h(mail)f
+(folder)g(has)60 2172 y(the)h(name)g Fa(INBOX)p Fd(.)g(Any)g(other)g
+(name)g(will)h(be)f(interpr)o(eted)h(as)f(a)g(\002lename)h(r)o(elative)
+g(to)60 2232 y(the)f(folder)f(dir)o(ectory)-6 b(.)60
+2383 y Fb(4.3)59 b(W)l(riting)15 b(mail/news)60 2478
+y Fd(Befor)o(e)c(being)h(able)f(to)i(send)f(mail,)h(you)f(need)g(to)g
+(con\002gur)o(e)f(the)h Fa(MailHost)f Fd(setting)i(to)60
+2538 y(tell)h(it)f(wher)o(e)e(to)i(send)g(the)g(mail.)903
+2856 y(4)p eop
 %%Page: 5 5
-5 4 bop 60 203 a Fc(5.2)59 b(Initialisation)60 299 y
-Fe(At)13 b(startup,)h(M)f(will)h(load)g(a)f(\002le)g(called)i
-Fb(Minit.py)d Fe(and)h(call)h(the)f Fb(Minit\(\))f Fe(function)60
-359 y(de\002ned)h(in)g(ther)o(e,)g(without)g(any)f(ar)o(guments.)60
-509 y Fc(5.3)59 b(Callback)14 b(Functions)f(\(Hooks\))60
-605 y Fe(Ther)o(e)g(ar)o(e)g(a)h(lar)o(ge)f(number)g(of)h(callbacks)g
+5 4 bop 60 205 a Ff(5)72 b(Scripting)16 b(and)i(Python)f(integration)60
+334 y Fb(5.1)59 b(Introduction)60 429 y Fd(M)16 b(uses)g(Python)h(as)f
+(an)f(embedded)i(scripting)g(language.)26 b(A)16 b(lar)o(ge)f(number)h
+(of)f(user)60 489 y(de\002nable)20 b(callback)g(functions)g(ar)o(e)g
+(available.)38 b(Scripts)20 b(have)g(access)g(most)g(objects)60
+549 y(living)14 b(in)f(M.)60 700 y Fb(5.2)59 b(Initialisation)60
+795 y Fd(At)13 b(startup,)h(M)f(will)h(load)g(a)f(\002le)g(called)i
+Fa(Minit.py)d Fd(and)h(call)h(the)f Fa(Minit\(\))f Fd(function)60
+856 y(de\002ned)h(in)g(ther)o(e,)g(without)g(any)f(ar)o(guments.)60
+1006 y Fb(5.3)59 b(Callback)14 b(Functions)f(\(Hooks\))60
+1101 y Fd(Ther)o(e)g(ar)o(e)g(a)h(lar)o(ge)f(number)g(of)h(callbacks)g
 (available)h(which)e(will)i(be)e(called)j(fr)o(om)d(dif-)60
-665 y(fer)o(ent)19 b(places)h(withing)g(M.)g(These)f(ar)o(e)h
-(documented)g(in)h Fb(Mcallbacks.h)p Fe(.)36 b(All)20
-b(of)60 725 y(these)13 b(callbacks)f(ar)o(e)g(called)i(with)f(at)f
-(least)i(two)e(ar)o(guments:)120 839 y(1.)25 b(The)9
+1162 y(fer)o(ent)19 b(places)h(withing)g(M.)g(These)f(ar)o(e)h
+(documented)g(in)h Fa(Mcallbacks.h)p Fd(.)36 b(All)20
+b(of)60 1222 y(these)13 b(callbacks)f(ar)o(e)g(called)i(with)f(at)f
+(least)i(two)e(ar)o(guments:)120 1336 y(1.)25 b(The)9
 b(name)g(of)g(the)h(hook)f(for)g(which)h(the)f(function)i(got)e
-(called,)j(e.g.)j Fb(FolderOpenHook)120 941 y Fe(2.)25
+(called,)j(e.g.)j Fa(FolderOpenHook)120 1438 y Fd(2.)25
 b(A)9 b(pointer)h(to)g(the)f(object)h(fr)o(om)f(which)g(it)h(was)f
-(called.)17 b(E.g.)e(for)9 b Fb(FolderOpenHook)p Fe(,)182
-1001 y(this)18 b(would)g(be)f(a)g(pointer)g(to)h(a)f
-Fb(MailFolder)f Fe(object.)30 b(This)18 b(object)f(does)h(not)182
-1061 y(carry)e(a)h(useable)g(type)g(with)g(it)h(and)f(needs)h(to)f(be)g
-(converted)g(in)h(the)f(callback,)182 1122 y(e.g.)26
-b(if)16 b(the)g(ar)o(gument)g(is)g(called)i Fb(arg)d
-Fe(and)i(the)f(object)f(is)i(a)f Fb(MailFolder)p Fe(,)g(the)182
-1182 y(object)h(must)i(either)f(be)f(used)h(as)g Fb
-(MailFolder.MailFolder\(arg\))d Fe(or)j(be)182 1242 y(converted)13
-b(as)f Fb(mf)30 b(=)g(MailFolder.MailFolder\(arg\))p
-Fe(.)120 1344 y(3.)25 b(Some)15 b(callbacks)f(have)h(a)f(thir)o(d)h(ar)
+(called.)17 b(E.g.)e(for)9 b Fa(FolderOpenHook)p Fd(,)182
+1498 y(this)18 b(would)g(be)f(a)g(pointer)g(to)h(a)f
+Fa(MailFolder)f Fd(object.)30 b(This)18 b(object)f(does)h(not)182
+1558 y(carry)e(a)h(useable)g(type)g(with)g(it)h(and)f(needs)h(to)f(be)g
+(converted)g(in)h(the)f(callback,)182 1618 y(e.g.)26
+b(if)16 b(the)g(ar)o(gument)g(is)g(called)i Fa(arg)d
+Fd(and)i(the)f(object)f(is)i(a)f Fa(MailFolder)p Fd(,)g(the)182
+1678 y(object)h(must)i(either)f(be)f(used)h(as)g Fa
+(MailFolder.MailFolder\(arg\))d Fd(or)j(be)182 1739 y(converted)13
+b(as)f Fa(mf)30 b(=)g(MailFolder.MailFolder\(arg\))p
+Fd(.)120 1840 y(3.)25 b(Some)15 b(callbacks)f(have)h(a)f(thir)o(d)h(ar)
 o(gument.)22 b(This)14 b(is)h(either)g(a)f(single)h(value)g(or)f(a)182
-1404 y(tuple)f(holding)h(several)e(values.)60 1554 y
-Fc(5.4)59 b(Namespaces)60 1650 y Fe(T)-5 b(o)16 b(avoid)i(r)o
+1901 y(tuple)f(holding)h(several)e(values.)60 2051 y
+Fb(5.4)59 b(Namespaces)60 2146 y Fd(T)-5 b(o)16 b(avoid)i(r)o
 (epeatedly)e(typing)h(in)f(the)h(name)f(of)g(the)g(module)i(\()p
-Fb(MailFolder)c Fe(in)j(this)60 1710 y(case\),)10 b(it)g(can)g(be)f
+Fa(MailFolder)c Fd(in)j(this)60 2207 y(case\),)10 b(it)g(can)g(be)f
 (imported)h(into)g(the)g(global)g(namespace)f(with)h(\223)p
-Fb(from\230MailFolder\230import\230*)p Fe(\224.)60 1770
+Fa(from\230MailFolder\230import\230*)p Fd(\224.)60 2267
 y(By)15 b(default)g(modules)h(ar)o(e)e(not)h(imported)g(into)h(the)e
-(global)h(namespace)g(and)g(must)g(be)60 1830 y(explicitly)f(named.)60
-1981 y Fc(5.5)59 b(List)14 b(of)i(Callbacks)p 60 2058
-3376 2 v 59 2118 2 61 v 85 2100 a Fe(Callback)d(Name)p
-706 2118 V 309 w(Object)f(T)l(ype)p 1017 2118 V 127 w(Additional)j(Ar)o
-(guments/T)l(ypes)p 1885 2118 V 280 w(Return)d(V)-5 b(alue)p
-2530 2118 V 204 w(Documentaion)p 3434 2118 V 60 2120
-3376 2 v 60 2128 V 59 2188 2 61 v 85 2170 a(FolderOpenHook)p
-706 2188 V 267 w(MailFolder)p 1017 2188 V 460 w(-)p 1885
-2188 V 698 w(void)p 2530 2188 V 299 w(Called)14 b(after)e(a)g(folder)h
-(has)f(been)g(opened.)p 3434 2188 V 60 2190 3376 2 v
-59 2250 2 61 v 85 2232 a(FolderUpdateHook)p 706 2250
-V 225 w(MailFolder)p 1017 2250 V 460 w(-)p 1885 2250
-V 698 w(void)p 2530 2250 V 299 w(Called)i(after)e(a)g(folder)h(has)f
-(been)g(updated.)p 3434 2250 V 60 2252 3376 2 v 59 2312
-2 61 v 85 2294 a(FolderDeleteMessageHook)p 706 2312 V
-58 w(MailFolder)p 1017 2312 V 60 w(\(long\))g(index)h(of)f(message)g
-(to)h(be)e(deleted)p 1885 2312 V 51 w(1)i(if)f(delete)i(is)f(ok,0)f
-(otherwise)p 2530 2312 V 50 w(Called)i(befor)o(e)d(deleting)j(a)e
-(mesage.)p 3434 2312 V 60 2314 3376 2 v 59 2374 2 61
-v 85 2356 a(FolderExpungeHook)p 706 2374 V 192 w(MailFolder)p
-1017 2374 V 460 w(-)p 1885 2374 V 490 w(1)g(to)h(expunge,)f(0)g(to)h
-(abort)p 2530 2374 V 89 w(Called)h(befor)o(e)d(expunging)h(messages.)p
-3434 2374 V 60 2375 3376 2 v 60 2549 a Fg(6)72 b(Further)17
-b(Information)133 2663 y Fd(\017)24 b Fe(Y)-5 b(ou)13
-b(can)g(download)g(the)g(latest)g(version)g(of)f(M)h(fr)o(om)182
-2723 y Fb(http://Ballueder.home.ml.org/M/)903 2856 y
-Fe(5)p eop
+(global)h(namespace)g(and)g(must)g(be)60 2327 y(explicitly)f(named.)903
+2856 y(5)p eop
 %%Page: 6 6
-6 5 bop 133 203 a Fd(\017)24 b Fe(Y)-5 b(ou)13 b(can)g(also)g(get)f
-(up-to-date)h(information)g(on)f(M)h(fr)o(om)f(the)h(M)f(WWW)g(Page:)
-182 264 y Fb(http://Ballueder.home.ml.org/M/)133 365
-y Fd(\017)24 b Fe(wxW)m(indows)12 b(is)i(available)f(fr)o(om)182
-425 y Fb(http://web.ukonline.co.uk/julia)o(n.smart/)60
-599 y Fg(7)72 b(F)l(AQ)903 2856 y Fe(6)p eop
+6 5 bop 60 203 a Fb(5.5)59 b(List)14 b(of)i(Callbacks)p
+60 280 3431 2 v 59 341 2 61 v 85 323 a Fd(Callback)d(Name)p
+655 341 V 258 w(Object)f(T)l(ype)p 965 341 V 48 w(Additional)j(Ar)o
+(guments/T)l(ypes)p 1676 341 V 48 w(Return)e(V)-5 b(alue)p
+2510 341 V 544 w(Documentaion)p 3490 341 V 60 342 3431
+2 v 60 351 V 59 411 2 61 v 85 393 a(FolderOpenHook)p
+655 411 V 216 w(MailFolder)p 965 411 V 1676 411 V 770
+w(void)p 2510 411 V 734 w(Called)14 b(after)e(a)h(folder)f(has)h(been)e
+(opened.)p 3490 411 V 60 412 3431 2 v 59 473 2 61 v 85
+455 a(FolderUpdateHook)p 655 473 V 174 w(MailFolder)p
+965 473 V 1676 473 V 770 w(void)p 2510 473 V 734 w(Called)j(after)e(a)h
+(folder)f(has)h(been)e(updated.)p 3490 473 V 60 474 3431
+2 v 59 534 2 61 v 85 516 a(FolderSetMessageFlag)p 655
+534 V 110 w(MailFolder)p 965 534 V 59 w(\(long\))h(index)h(of)f
+(message)p 1676 534 V 188 w(1)h(if)f(changing)g(\003ags)h(is)g(ok,0)g
+(otherwise)p 2510 534 V 49 w(Called)h(befor)o(e)e(changing)g(\003ags)h
+(for)e(a)i(mesage.)p 3490 534 V 59 595 V 655 595 V 965
+595 V 991 577 a(\(string\)name)f(of)g(\003ag)p 1676 595
+V 2510 595 V 3490 595 V 60 596 3431 2 v 59 656 2 61 v
+85 638 a(FolderClearMessageFlag)p 655 656 V 58 w(MailFolder)p
+965 656 V 59 w(\(long\))g(index)h(of)f(message)p 1676
+656 V 188 w(1)h(if)f(changing)g(\003ags)h(is)g(ok,0)g(otherwise)p
+2510 656 V 49 w(Called)h(befor)o(e)e(changing)g(\003ags)h(for)e(a)i
+(mesage.)p 3490 656 V 59 717 V 655 717 V 965 717 V 991
+699 a(\(string\))f(name)g(of)g(\003ag)p 1676 717 V 2510
+717 V 3490 717 V 60 718 3431 2 v 59 779 2 61 v 85 760
+a(FolderExpungeHook)p 655 779 V 141 w(MailFolder)p 965
+779 V 1676 779 V 770 w(1)h(to)f(expunge,)g(0)h(to)g(abort)p
+2510 779 V 315 w(Called)h(befor)o(e)e(expunging)g(messages.)p
+3490 779 V 60 780 3431 2 v 60 953 a Ff(6)72 b(Further)17
+b(Information)133 1067 y Fc(\017)24 b Fd(Y)-5 b(ou)10
+b(can)g(download)g(the)g(latest)g(version)g(of)g(M)f(fr)o(om)g
+Fa(http://Ballueder.home.ml.org/M/)133 1169 y Fc(\017)24
+b Fd(Y)-5 b(ou)10 b(can)g(also)g(get)f(up-to-date)h(information)g(on)g
+(M)f(fr)o(om)g(the)h(M)f(WWW)g(Page:)h Fa
+(http://Ballueder.home.ml.org/)o(M/)133 1271 y Fc(\017)24
+b Fd(wxW)m(indows)10 b(is)g(available)g(fr)o(om)f Fa
+(http://web.ukonline.co.uk/juli)o(an.smart/)133 1372
+y Fc(\017)24 b Fd(The)9 b(GTK)g(port)g(of)h(wxW)m(indows,)g(wxGTK,)f
+(is)h(available)h(fr)o(om:)i(http://www)-5 b(.fr)o(eibur)o
+(g.linux.de/\230wxxt/)60 1545 y Ff(7)72 b(F)l(AQ)903
+2856 y Fd(6)p eop
 %%Trailer
 end
 userdict /end-hook known{end-hook}if
