--- a/extra/patches/c-client4.2
+++ b/extra/patches/c-client4.2
@@ -1,26 +1,5 @@
---- /tmp/imap-4.2/c-client/CFLAGS	Thu Aug  6 11:02:41 1998
-+++ CFLAGS	Thu Aug  6 11:44:17 1998
-@@ -1 +1 @@
---g -fno-omit-frame-pointer -O6 -DNFSKLUDGE
-+-g -O -DNFSKLUDGE
---- /tmp/imap-4.2/c-client/LDFLAGS	Thu Aug  6 11:02:42 1998
-+++ LDFLAGS	Thu Aug  6 11:44:17 1998
-@@ -1 +1 @@
---s -lcrypt
-+
---- /tmp/imap-4.2/c-client/Makefile	Thu Jul 16 20:12:22 1998
-+++ Makefile	Thu Aug  6 11:44:15 1998
-@@ -94,7 +94,7 @@
-  rfc822.o nntp.o smtp.o imap4r1.o pop3.o \
-  unix.o mbox.o mbx.o mmdf.o tenex.o mtx.o news.o phile.o mh.o mx.o
- CFLAGS=$(BASECFLAGS) $(EXTRACFLAGS)
--MAKE=make
-+MAKE=make -f Makefile.ccl
- MV=mv
- RM=rm -rf
- SH=sh
---- /tmp/imap-4.2/c-client/env_unix.c	Tue Jul 14 02:55:36 1998
-+++ env_unix.c	Thu Aug  6 11:25:11 1998
+--- ../c-client-4.2.original/env_unix.c	Tue Jul 14 02:55:36 1998
++++ env_unix.c	Thu Aug  6 20:08:48 1998
 @@ -964,7 +964,7 @@
   *	    path name buffer, preloaded with driver-dependent path
   * Returns: T on success, NIL on failure
@@ -30,8 +9,8 @@
   * tmail/dmail and is not supported for any other application.
   */
  
---- /tmp/imap-4.2/c-client/imap4r1.c	Fri Jul 17 20:10:53 1998
-+++ imap4r1.c	Thu Aug  6 11:25:12 1998
+--- ../c-client-4.2.original/imap4r1.c	Fri Jul 17 20:10:53 1998
++++ imap4r1.c	Thu Aug  6 20:08:48 1998
 @@ -996,7 +996,7 @@
    aatt.type = ATOM; aatt.text = NIL;
    if (flags & FT_UID)		/* see if can find msgno from UID */
@@ -252,8 +231,8 @@
      if (text && ret->data) fs_give ((void **) &ret->data);
    }
  
---- /tmp/imap-4.2/c-client/mail.c	Thu Jul 16 11:32:39 1998
-+++ mail.c	Thu Aug  6 11:25:13 1998
+--- ../c-client-4.2.original/mail.c	Thu Jul 16 11:32:39 1998
++++ mail.c	Thu Aug  6 20:08:48 1998
 @@ -987,8 +987,8 @@
      b = &stream->body;
    }
@@ -553,28 +532,8 @@
      fs_give ((void **) elt);
    }
    else *elt = NIL;		/* else simply drop pointer */
---- /tmp/imap-4.2/c-client/mail.h	Tue Jul 14 02:24:49 1998
-+++ mail.h	Thu Aug  6 11:25:06 1998
-@@ -515,7 +515,7 @@
-     PARTTEXT special;		/* special text pointers */
-     MESSAGE msg;		/* internal message pointers */
-     unsigned int sequence : 1;	/* saved sequence bit; */
--  } private;
-+  } ccprivate;
- 			/* internal date */
-   unsigned int day : 5;		/* day of month (1-31) */
-   unsigned int month : 4;	/* month of year (1-12) */
-@@ -757,7 +757,7 @@
-       long result;		/* search result */
-       char *text;		/* cache of fetched text */
-     } search;
--  } private;
-+  } ccprivate;
- } MAILSTREAM;
- 
- 
---- /tmp/imap-4.2/c-client/mbx.c	Wed Jul  1 19:24:13 1998
-+++ mbx.c	Thu Aug  6 11:25:13 1998
+--- ../c-client-4.2.original/mbx.c	Wed Jul  1 19:24:13 1998
++++ mbx.c	Thu Aug  6 20:08:48 1998
 @@ -758,13 +758,13 @@
  	 i <= stream->nmsgs; ) {
        elt = mbx_elt (stream,i,NIL);
@@ -736,8 +695,8 @@
    }
    return ret;
  }
---- /tmp/imap-4.2/c-client/mh.c	Tue Jul 14 01:53:48 1998
-+++ mh.c	Thu Aug  6 11:25:14 1998
+--- ../c-client-4.2.original/mh.c	Tue Jul 14 01:53:48 1998
++++ mh.c	Thu Aug  6 20:08:48 1998
 @@ -542,9 +542,9 @@
    *length = 0;			/* default to empty */
    if (flags & FT_UID) return "";/* UID call "impossible" */
@@ -839,8 +798,8 @@
  	if ((fd = open (LOCAL->buf,O_RDONLY,NIL)) < 0) return NIL;
  	fstat (fd,&sbuf);	/* get size of message */
  	if (!elt->day) {	/* make plausible IMAPish date string */
---- /tmp/imap-4.2/c-client/mmdf.c	Thu Jul 16 02:50:59 1998
-+++ mmdf.c	Thu Aug  6 11:25:14 1998
+--- ../c-client-4.2.original/mmdf.c	Thu Jul 16 02:50:59 1998
++++ mmdf.c	Thu Aug  6 20:08:48 1998
 @@ -486,26 +486,26 @@
  					 (unsigned char *) "X-UID"));
    }
@@ -1074,8 +1033,8 @@
  				/* get text */
        s = mmdf_text_work (stream,elt,&i,FT_INTERNAL);
  				/* write text and trailing newline */
---- /tmp/imap-4.2/c-client/mtx.c	Tue Jul 14 01:53:29 1998
-+++ mtx.c	Thu Aug  6 11:25:14 1998
+--- ../c-client-4.2.original/mtx.c	Tue Jul 14 01:53:29 1998
++++ mtx.c	Thu Aug  6 20:08:48 1998
 @@ -706,7 +706,7 @@
    while (i <= stream->nmsgs) {	/* for each message */
      elt = mtx_elt (stream,i);	/* get cache element */
@@ -1224,8 +1183,8 @@
 -  return elt->private.msg.header.offset;
 +  return elt->ccprivate.msg.header.offset;
  }
---- /tmp/imap-4.2/c-client/mx.c	Tue Dec 30 04:45:49 1997
-+++ mx.c	Thu Aug  6 11:25:14 1998
+--- ../c-client-4.2.original/mx.c	Tue Dec 30 04:45:49 1997
++++ mx.c	Thu Aug  6 20:08:48 1998
 @@ -424,7 +424,7 @@
    struct stat sbuf;
    struct tm *tm;
@@ -1336,8 +1295,8 @@
  	       (fSEEN * elt->seen) + (fDELETED * elt->deleted) +
  	       (fFLAGGED * elt->flagged) + (fANSWERED * elt->answered) +
  	       (fDRAFT * elt->draft));
---- /tmp/imap-4.2/c-client/news.c	Tue Dec 30 04:43:46 1997
-+++ news.c	Thu Aug  6 11:25:14 1998
+--- ../c-client-4.2.original/news.c	Tue Dec 30 04:43:46 1997
++++ news.c	Thu Aug  6 20:08:48 1998
 @@ -318,7 +318,7 @@
      LOCAL->buf = (char *) fs_get ((LOCAL->buflen = MAXMESSAGESIZE) + 1);
      LOCAL->name = cpystr (stream->mailbox + 6);
@@ -1404,8 +1363,8 @@
    return T;
  }
  
---- /tmp/imap-4.2/c-client/newsrc.c	Thu Sep 11 22:32:48 1997
-+++ newsrc.c	Thu Aug  6 11:25:14 1998
+--- ../c-client-4.2.original/newsrc.c	Thu Sep 11 22:32:48 1997
++++ newsrc.c	Thu Aug  6 20:08:48 1998
 @@ -124,12 +124,12 @@
    for (i = 1,j = 1,k = 0; i <= stream->nmsgs; ++i) {
  				/* deleted message? */
@@ -1440,8 +1399,8 @@
  	      elt->valid = elt->deleted = T;
  	  }
  
---- /tmp/imap-4.2/c-client/nntp.c	Thu Jul 16 23:48:59 1998
-+++ nntp.c	Thu Aug  6 11:25:14 1998
+--- ../c-client-4.2.original/nntp.c	Thu Jul 16 23:48:59 1998
++++ nntp.c	Thu Aug  6 20:08:48 1998
 @@ -523,14 +523,14 @@
  	 (nntp_send (nstream,"XHDR Date",tmp) == NNTPHEAD))) {
        nmsgs = 0;		/* have holes, calculate true count */
@@ -1507,182 +1466,8 @@
      if (nntp_send (LOCAL->nntpstream,"BODY",tmp) != NNTPBODY)
        elt->deleted = T;		/* failed mark as deleted */
      else LOCAL->txt = netmsg_slurp (LOCAL->nntpstream->netstream,
---- /tmp/imap-4.2/c-client/osdep.c	Thu Aug  6 11:02:42 1998
-+++ osdep.c	Thu Aug  6 11:44:18 1998
-@@ -1,5 +1,5 @@
- /*
-- * Program:	Operating-system dependent routines -- Secure Linux version
-+ * Program:	Operating-system dependent routines -- Linux version
-  *
-  * Author:	Mark Crispin
-  *		Networks and Distributed Computing
-@@ -10,7 +10,7 @@
-  *		Internet: MRC@CAC.Washington.EDU
-  *
-  * Date:	1 August 1993
-- * Last Edited:	3 December 1997
-+ * Last Edited:	2 December 1997
-  *
-  * Copyright 1997 by the University of Washington
-  *
-@@ -47,7 +47,6 @@
- #include <errno.h>
- extern int errno;		/* just in case */
- #include <pwd.h>
--#include <shadow.h>
- #include "misc.h"
- 
- 
-@@ -60,7 +59,7 @@
- #include "gr_waitp.c"
- #include "tz_sv4.c"
- /*
-- * Program:	POSIX check password
-+ * Program:	Standard check password
-  *
-  * Author:	Mark Crispin
-  *		Networks and Distributed Computing
-@@ -71,9 +70,9 @@
-  *		Internet: MRC@CAC.Washington.EDU
-  *
-  * Date:	1 August 1988
-- * Last Edited:	4 June 1998
-+ * Last Edited:	2 December 1997
-  *
-- * Copyright 1998 by the University of Washington
-+ * Copyright 1997 by the University of Washington
-  *
-  *  Permission to use, copy, modify, and distribute this software and its
-  * documentation for any purpose and without fee is hereby granted, provided
-@@ -104,39 +103,7 @@
- 
- struct passwd *checkpw (struct passwd *pw,char *pass,int argc,char *argv[])
- {
--  char tmp[MAILTMPLEN];
--  struct spwd *sp = NIL;
--  time_t left;
--  time_t now = time (0) / (60*60*24);
--				/* non-shadow authentication */
--  if (!pw->pw_passwd || !pw->pw_passwd[0] ||
--      strcmp (pw->pw_passwd,(char *) crypt (pass,pw->pw_passwd))) {
--				/* shadow authentication */
--    if ((sp = getspnam (pw->pw_name)) &&
--	((sp->sp_lstchg <= 0) || (sp->sp_max <= 0) ||
--	 ((sp->sp_lstchg + sp->sp_max) >= now)) &&
--	((sp->sp_expire <= 0) || (sp->sp_expire > now)) &&
--	!strcmp (sp->sp_pwdp,(char *) crypt (pass,sp->sp_pwdp))) {
--      if ((sp->sp_lstchg > 0) && (sp->sp_max > 0) &&
--	  ((left = (sp->sp_lstchg + sp->sp_max) - now) <= sp->sp_warn)) {
--	if (left) {
--	  sprintf (tmp,"[ALERT] Password expires in %ld day(s)",(long) left);
--	  mm_notify (NIL,tmp,NIL);
--	}
--	else mm_notify (NIL,"[ALERT] Password expires today!",WARN);
--      }
--      if ((sp->sp_expire > 0) && ((left = sp->sp_expire - now) < 28)) {
--	if (left) {
--	  sprintf (tmp,"[ALERT] Account expires in %ld day(s)",(long) left);
--	  mm_notify (NIL,tmp,NIL);
--	}
--	else mm_notify (NIL,"[ALERT] Account expires today!",WARN);
--      }
--      endspent ();		/* don't need shadow password data any more */
--    }
--    else pw = NIL;		/* password failed */
--  }
--  return pw;
-+  return strcmp (pw->pw_passwd,(char *) crypt (pass,pw->pw_passwd)) ? NIL : pw;
- }
- /*
-  * Program:	Standard login
---- /tmp/imap-4.2/c-client/osdepbas.c	Thu Dec  4 00:35:05 1997
-+++ osdepbas.c	Thu Aug  6 11:25:15 1998
-@@ -1,5 +1,5 @@
- /*
-- * Program:	Operating-system dependent routines -- Secure Linux version
-+ * Program:	Operating-system dependent routines -- Linux version
-  *
-  * Author:	Mark Crispin
-  *		Networks and Distributed Computing
-@@ -10,7 +10,7 @@
-  *		Internet: MRC@CAC.Washington.EDU
-  *
-  * Date:	1 August 1993
-- * Last Edited:	3 December 1997
-+ * Last Edited:	2 December 1997
-  *
-  * Copyright 1997 by the University of Washington
-  *
-@@ -47,7 +47,6 @@
- #include <errno.h>
- extern int errno;		/* just in case */
- #include <pwd.h>
--#include <shadow.h>
- #include "misc.h"
- 
- 
---- /tmp/imap-4.2/c-client/osdepckp.c	Fri Jun  5 00:15:34 1998
-+++ osdepckp.c	Thu Aug  6 11:25:10 1998
-@@ -1,5 +1,5 @@
- /*
-- * Program:	POSIX check password
-+ * Program:	Standard check password
-  *
-  * Author:	Mark Crispin
-  *		Networks and Distributed Computing
-@@ -10,9 +10,9 @@
-  *		Internet: MRC@CAC.Washington.EDU
-  *
-  * Date:	1 August 1988
-- * Last Edited:	4 June 1998
-+ * Last Edited:	2 December 1997
-  *
-- * Copyright 1998 by the University of Washington
-+ * Copyright 1997 by the University of Washington
-  *
-  *  Permission to use, copy, modify, and distribute this software and its
-  * documentation for any purpose and without fee is hereby granted, provided
-@@ -43,37 +43,5 @@
- 
- struct passwd *checkpw (struct passwd *pw,char *pass,int argc,char *argv[])
- {
--  char tmp[MAILTMPLEN];
--  struct spwd *sp = NIL;
--  time_t left;
--  time_t now = time (0) / (60*60*24);
--				/* non-shadow authentication */
--  if (!pw->pw_passwd || !pw->pw_passwd[0] ||
--      strcmp (pw->pw_passwd,(char *) crypt (pass,pw->pw_passwd))) {
--				/* shadow authentication */
--    if ((sp = getspnam (pw->pw_name)) &&
--	((sp->sp_lstchg <= 0) || (sp->sp_max <= 0) ||
--	 ((sp->sp_lstchg + sp->sp_max) >= now)) &&
--	((sp->sp_expire <= 0) || (sp->sp_expire > now)) &&
--	!strcmp (sp->sp_pwdp,(char *) crypt (pass,sp->sp_pwdp))) {
--      if ((sp->sp_lstchg > 0) && (sp->sp_max > 0) &&
--	  ((left = (sp->sp_lstchg + sp->sp_max) - now) <= sp->sp_warn)) {
--	if (left) {
--	  sprintf (tmp,"[ALERT] Password expires in %ld day(s)",(long) left);
--	  mm_notify (NIL,tmp,NIL);
--	}
--	else mm_notify (NIL,"[ALERT] Password expires today!",WARN);
--      }
--      if ((sp->sp_expire > 0) && ((left = sp->sp_expire - now) < 28)) {
--	if (left) {
--	  sprintf (tmp,"[ALERT] Account expires in %ld day(s)",(long) left);
--	  mm_notify (NIL,tmp,NIL);
--	}
--	else mm_notify (NIL,"[ALERT] Account expires today!",WARN);
--      }
--      endspent ();		/* don't need shadow password data any more */
--    }
--    else pw = NIL;		/* password failed */
--  }
--  return pw;
-+  return strcmp (pw->pw_passwd,(char *) crypt (pass,pw->pw_passwd)) ? NIL : pw;
- }
---- /tmp/imap-4.2/c-client/phile.c	Tue Jul 14 01:55:23 1998
-+++ phile.c	Thu Aug  6 11:25:17 1998
+--- ../c-client-4.2.original/phile.c	Tue Jul 14 01:55:23 1998
++++ phile.c	Thu Aug  6 20:08:48 1998
 @@ -284,7 +284,7 @@
  				/* set subject to be mailbox name */
    LOCAL->env->subject = cpystr (stream->mailbox);
@@ -1719,8 +1504,8 @@
    if (!(flags &FT_PEEK)) {	/* mark message as seen */
      mail_elt (stream,msgno)->seen = T;
      mm_flags (stream,msgno);
---- /tmp/imap-4.2/c-client/pop3.c	Tue Jul 14 01:57:00 1998
-+++ pop3.c	Thu Aug  6 11:25:17 1998
+--- ../c-client-4.2.original/pop3.c	Tue Jul 14 01:57:00 1998
++++ pop3.c	Thu Aug  6 20:08:48 1998
 @@ -382,7 +382,7 @@
        for (i = 0; i < stream->nmsgs;) {
  	elt = mail_elt (stream,++i);
@@ -1765,8 +1550,8 @@
  }
  
  /* POP3 fetch body
---- /tmp/imap-4.2/c-client/rfc822.c	Thu Jun 25 21:18:13 1998
-+++ rfc822.c	Thu Aug  6 11:25:17 1998
+--- ../c-client-4.2.original/rfc822.c	Thu Jun 25 21:18:13 1998
++++ rfc822.c	Thu Aug  6 20:08:48 1998
 @@ -109,6 +109,27 @@
   *	    message body
   */
@@ -1805,8 +1590,8 @@
    if (body && !env->remail) {	/* not if remail or no body structure */
      strcat (header,"MIME-Version: 1.0\015\012");
      rfc822_write_body_header (&header,body);
---- /tmp/imap-4.2/c-client/tenex.c	Tue Jul 14 01:54:51 1998
-+++ tenex.c	Thu Aug  6 11:25:18 1998
+--- ../c-client-4.2.original/tenex.c	Tue Jul 14 01:54:51 1998
++++ tenex.c	Thu Aug  6 20:08:48 1998
 @@ -419,20 +419,20 @@
      for (i = 1; i <= stream->nmsgs; i++)
        if ((elt = mail_elt (stream,i))->sequence) {
@@ -1985,8 +1770,8 @@
    }
    return ret;
  }
---- /tmp/imap-4.2/c-client/unix.c	Thu Jul 16 02:50:38 1998
-+++ unix.c	Thu Aug  6 11:25:18 1998
+--- ../c-client-4.2.original/unix.c	Thu Jul 16 02:50:38 1998
++++ unix.c	Thu Aug  6 20:08:48 1998
 @@ -515,26 +515,26 @@
  					 (unsigned char *) "X-UID"));
    }
@@ -2202,3 +1987,742 @@
  				/* get text */
        s = unix_text_work (stream,elt,&i,FT_INTERNAL);
  				/* write text and trailing newline */
+--- ../c-client-4.2.original/mail.h	Tue Jul 14 02:24:49 1998
++++ mail.h	Sat Aug  8 12:56:53 1998
+@@ -35,6 +35,9 @@
+ 
+ /* Build parameters */
+ 
++#ifndef CC_MAIL_H
++#   define CC_MAIL_H
++
+ #define CACHEINCREMENT 250	/* cache growth increments */
+ #define MAILTMPLEN 1024		/* size of a temporary buffer */
+ #define MAXMESSAGESIZE 65000	/* MS-DOS: maximum text buffer size
+@@ -515,7 +518,7 @@
+     PARTTEXT special;		/* special text pointers */
+     MESSAGE msg;		/* internal message pointers */
+     unsigned int sequence : 1;	/* saved sequence bit; */
+-  } private;
++  } ccprivate;
+ 			/* internal date */
+   unsigned int day : 5;		/* day of month (1-31) */
+   unsigned int month : 4;	/* month of year (1-12) */
+@@ -757,7 +760,7 @@
+       long result;		/* search result */
+       char *text;		/* cache of fetched text */
+     } search;
+-  } private;
++  } ccprivate;
+ } MAILSTREAM;
+ 
+ 
+@@ -1291,3 +1294,6 @@
+ long sm_subscribe (char *mailbox);
+ long sm_unsubscribe (char *mailbox);
+ char *sm_read (void **sdb);
++
++#endif // CC_MAIL_H
++
+--- ../c-client-4.2.original/Makefile	Thu Jul 16 20:12:22 1998
++++ Makefile	Thu Aug  6 20:16:55 1998
+@@ -1,683 +1,24 @@
+-# Program:	C client makefile
+-#
+-# Author:	Mark Crispin
+-#		Networks and Distributed Computing
+-#		Computing & Communications
+-#		University of Washington
+-#		Administration Building, AG-44
+-#		Seattle, WA  98195
+-#		Internet: MRC@CAC.Washington.EDU
+-#
+-# Date:		11 May 1989
+-# Last Edited:	16 July 1998
+-#
+-# Copyright 1998 by the University of Washington
+-#
+-#  Permission to use, copy, modify, and distribute this software and its
+-# documentation for any purpose and without fee is hereby granted, provided
+-# that the above copyright notice appears in all copies and that both the
+-# above copyright notice and this permission notice appear in supporting
+-# documentation, and that the name of the University of Washington not be
+-# used in advertising or publicity pertaining to distribution of the software
+-# without specific, written prior permission.  This software is made
+-# available "as is", and
+-# THE UNIVERSITY OF WASHINGTON DISCLAIMS ALL WARRANTIES, EXPRESS OR IMPLIED,
+-# WITH REGARD TO THIS SOFTWARE, INCLUDING WITHOUT LIMITATION ALL IMPLIED
+-# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE, AND IN
+-# NO EVENT SHALL THE UNIVERSITY OF WASHINGTON BE LIABLE FOR ANY SPECIAL,
+-# INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM
+-# LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, TORT
+-# (INCLUDING NEGLIGENCE) OR STRICT LIABILITY, ARISING OUT OF OR IN CONNECTION
+-# WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
++# Makefile for extra/src/c-client directory
++# $Id$
+ 
++CWD = extra/src/c-client
++CSRC = mail.c misc.c
+ 
+-# Command line build parameters
++TARGETS = $(CSRC:.c=.o)
+ 
+-EXTRAAUTHENTICATORS=
+-EXTRADRIVERS=mbox
+-PASSWDTYPE=std
+-
+-
+-# Extended flags needed for non-standard passwd types.  You may need to modify.
+-
+-AFSDIR=/usr/afsws
+-AFSCFLAGS=-Dexit=afs_exit -D_exit=_afs_exit -I$(AFSDIR)/include
+-AFSLIB=$(AFSDIR)/lib
+-AFSLDFLAGS=-L$(AFSLIB)/afs -L$(AFSLIB)\
+- -lkauth -lprot -lubik -lauth -lrxkad -lrx -llwp -ldes -lcom_err\
+- $(AFSLIB)/afs/util.a -laudit -lsys
+-DCECFLAGS= -DDCE_MINIMAL -DPASSWD_OVERRIDE=\"/opt/pop3/passwd/passwd\"
+-DCELDFLAGS= -ldce
+-
+-
+-# Extended flags needed for additional authenticators.  You may need to modify.
+-
+-KRBCFLAGS= -I/usr/include/kerberosIV
+-KRBLDFLAGS= -lkrb -ldes
+-GSSDIR=/usr/local
+-GSSCFLAGS= -I$(GSSDIR)/include
+-GSSLDFLAGS= -L$(GSSDIR)/lib -lgssapi_krb5 -lkrb5 -lcrypto -lcom_err
+-
+-
+-# Build parameters normally set by the individual port
+-
+-CHECKPW=std
+-LOGINPW=std
+-SIGTYPE=bsd
+-ACTIVEFILE=/usr/lib/news/active
+-SPOOLDIR=/usr/spool
+-MAILSPOOL=$(SPOOLDIR)/mail
+-NEWSSPOOL=$(SPOOLDIR)/news
+-STDPROTO=unixproto
+-RSHPATH=/usr/ucb/rsh
+-
+-
+-# Commands possibly overriden by the individual port
+-
+-ARRC=ar rc
+-CC=cc
+-LN=ln -s
+-RANLIB=ranlib
+-
+-
+-# Standard distribution build parameters
+-
+-DEFAULTAUTHENTICATORS=log
+-DEFAULTDRIVERS=imap nntp pop3 mh mx mbx tenex mtx mmdf unix news phile
+-
+-
+-# Normally no need to change any of these
+-
+-ARCHIVE=c-client.a
+-BINARIES=mail.o misc.o newsrc.o smanager.o osdep.o utf8.o siglocal.o \
+- dummy.o pseudo.o netmsg.o flstring.o fdstring.o \
+- rfc822.o nntp.o smtp.o imap4r1.o pop3.o \
+- unix.o mbox.o mbx.o mmdf.o tenex.o mtx.o news.o phile.o mh.o mx.o
+-CFLAGS=$(BASECFLAGS) $(EXTRACFLAGS)
+-MAKE=make
+-MV=mv
+-RM=rm -rf
+-SH=sh
+-
+-
+-# Primary build command
+-
+-BUILDOPTIONS= EXTRACFLAGS="$(EXTRACFLAGS)"\
+- EXTRALDFLAGS="$(EXTRALDFLAGS)"\
+- EXTRADRIVERS="$(EXTRADRIVERS)" EXTRAAUTHENTICATORS="$(EXTRAAUTHENTICATORS)"\
+- PASSWDTYPE=$(PASSWDTYPE) AFSDIR=$(AFSDIR) GSSDIR=$(GSSDIR)
+-BUILD=$(MAKE) build $(BUILDOPTIONS) $(EXTRASPECIALS)
+-
+-# Here if no make argument established
+-
+-missing: osdep.h
+-	$(MAKE) all CC=`cat CCTYPE` CFLAGS="`cat CFLAGS`"
+-
+-osdep.h:
+-	@echo You must specify what type of system
+-	@false
+-
+-
+-# Current ports
+-
+-a32:	# AIX 3.2 for RS/6000
+-	$(BUILD) OS=$@ SIGTYPE=psx \
+-	 SPOOLDIR=/var/spool \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -Dunix=1 -D_BSD -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lbsd"
+-
+-a41:	# AIX 4.1 for RS/6000
+-	$(BUILD) OS=$@ SIGTYPE=psx CHECKPW=a41 \
+-	 SPOOLDIR=/var/spool \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -Dunix=1 -D_BSD -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lbsd -ls"
+-
+-aix:	# AIX/370
+-	@echo You are building for AIX on an S/370 class machine
+-	@echo If you want AIX on an RS/6000 you need to use a32 or a41 instead!
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-g -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lbsd"
+-
+-aos:	# AOS for RT
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-g -Dconst= -DNFSKLUDGE"
+-
+-art:	# AIX 2.2.1 for RT
+-	$(BUILD) OS=$@ SIGTYPE=sv4 \
+-	 SPOOLDIR=/var \
+-	 ACTIVEFILE=/usr/local/news/control/active \
+-	 RSHPATH=/bin/rsh \
+-	 BASECFLAGS="-g -Dconst= -Dvoid=char" \
+-	 RANLIB=true 
+-
+-asv:	# Altos SVR4
+-	$(BUILD) OS=$@ SIGTYPE=sv4 LOGINPW=old \
+-	 ACTIVEFILE=/usr/spool/news/active \
+-	 RSHPATH=/usr/bin/rcmd \
+-	 BASECFLAGS="-Dconst= -DSIGSTOP=SIGKILL" \
+-	 BASELDFLAGS="-lsocket -lrpc -lgen -lcrypt -lxenix" \
+-	 RANLIB=true
+-
+-aux:	# A/UX
+-	$(BUILD) OS=$@ \
+-	 MAILSPOOL=/usr/mail \
+-	 BASECFLAGS="-g -B/usr/lib/big/ -Dvoid=char -Dconst= -DNFSKLUDGE" \
+-	 RANLIB=true ARRC="ar -rc"
+-
+-bs3:	# BSD/i386 3.0 or higher
+-	$(BUILD) OS=bsi CHECKPW=bsi LOGINPW=bsi \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/news/spool \
+-	 ACTIVEFILE=/var/news/etc/active \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -O2 -pipe -DNFSKLUDGE"
+-
+-bsd:	# BSD UNIX
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-g -Dconst= -DNFSKLUDGE"
+-
+-bsf:	# FreeBSD
+-	$(BUILD) OS=bsi SIGTYPE=psx \
+-	 SPOOLDIR=/var \
+-	 ACTIVEFILE=/usr/local/news/lib/active \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -O -pipe -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lcrypt"
+-
+-bsi:	# BSD/i386
+-	$(BUILD) OS=$@ \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/news/spool \
+-	 ACTIVEFILE=/var/news/etc/active \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -O2 -pipe -DNFSKLUDGE"
+-
+-cvx:	# Convex
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-O -ext -Dconst= -DNFDKLUDGE"
+-
+-d-g:	# Data General DG/UX
+-	$(BUILD) OS=$@ SIGTYPE=sv4 \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/local/news/active \
+-	 RSHPATH=/usr/bin/remsh \
+-	 BASECFLAGS="-g -Dconst= -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lnsl -lsocket" \
+-	 RANLIB=true
+-
+-d54:	# Data General DG/UX 5.4
+-	$(BUILD) OS=d-g SIGTYPE=sv4 \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/local/news/active \
+-	 RSHPATH=/usr/bin/remsh \
+-	 BASECFLAGS="-g -Dconst= -DNFSKLUDGE" \
+-	 RANLIB=true
+-
+-dpx:	# Bull DPX/2
+-	$(BUILD) OS=sv4 SIGTYPE=sv4 CHECKPW=sv4 LOGINPW=sv4 \
+-	 RSHPATH=/usr/bin/remsh \
+-	 BASECFLAGS="-Dconst= -DSYSTEM5 -DSHORT_IDENT" \
+-	 BASELDFLAGS="-linet" \
+-	 RANLIB=true LN=ln
+-
+-drs:	# ICL DRS/NX
+-	$(BUILD) OS=$@ SIGTYPE=sv4 CHECKPW=sv4 LOGINPW=sv4 \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/var/lib/news/active \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-O -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lsocket -lgen" \
+-	 RANLIB=true
+-
+-dyn:	# Dynix
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-g -Dconst= -DNFSKLUDGE"
+-
+-epx:	# EP/IX
+-	$(BUILD) OS=sv4 SIGTYPE=sv4 CHECKPW=sv4 LOGINPW=sv4 \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/usr/share/news/active \
+-	 RSHPATH=/usr/net/rsh \
+-	 BASECFLAGS="-g -systype svr4" \
+-	 BASELDFLAGS="-lsocket -lnsl -lgen" \
+-	 RANLIB=true
+-
+-gas:	# GCC Altos SVR4
+-	$(BUILD) OS=asv SIGTYPE=sv4 LOGINPW=old \
+-	 ACTIVEFILE=/usr/spool/news/active \
+-	 RSHPATH=/usr/bin/rcmd \
+-	 BASECFLAGS="-g -O -DALTOS_SYSTEM_V -DSIGSTOP=SIGKILL" \
+-	 BASELDFLAGS="-lsocket -lrpc -lgen -lcrypt -lxenix" \
+-	 RANLIB=true CC=gcc
+-
+-gh9:	# GCC HP-UX9.x
+-	$(BUILD) OS=hpp SIGTYPE=psx \
+-	 MAILSPOOL=/usr/mail \
+-	 RSHPATH=/usr/bin/remsh \
+-	 BASECFLAGS="-O2 -DNFSKLUDGE" \
+-	 RANLIB=true CC=gcc
+-
+-ghp:	# GCC HP-UX
+-	$(BUILD) OS=hpp SIGTYPE=psx \
+-	 SPOOLDIR=/var \
+-	 ACTIVEFILE=/var/news/active \
+-	 RSHPATH=/usr/bin/remsh \
+-	 BASECFLAGS="-O2 -DNFSKLUDGE" \
+-	 RANLIB=true CC=gcc
+-
+-gso:	# GCC Solaris
+-	$(BUILD) OS=sol SIGTYPE=psx CHECKPW=psx \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/usr/share/news/active \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -O2 -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lsocket -lnsl -lgen" \
+-	 RANLIB=true CC=gcc
+-
+-gsu:	# GCC SUN-OS
+-	$(BUILD) OS=sun \
+-	 BASECFLAGS="-O2 -DNFSKLUDGE" \
+-	 BASELDFLAGS="-ldl" \
+-	 CC=gcc
+-
+-gul:	# GCC Ultrix
+-	$(BUILD) OS=ult SIGTYPE=psx CHECKPW=ult \
+-	 BASECFLAGS="-g -O -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lauth" \
+-	 CC=gcc
+-
+-hpp:	# HP-UX 9.x
+-	$(BUILD) OS=$@ SIGTYPE=psx \
+-	 MAILSPOOL=/usr/mail \
+-	 RSHPATH=/usr/bin/remsh \
+-	 BASECFLAGS="-g -Aa -D_HPUX_SOURCE -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lnet -lV3" \
+-	 RANLIB=true
+-
+-hpx:	# HP-UX 10.x
+-	$(BUILD) OS=hpp SIGTYPE=psx \
+-	 SPOOLDIR=/var \
+-	 ACTIVEFILE=/var/news/active \
+-	 RSHPATH=/usr/bin/remsh \
+-	 BASECFLAGS="-g -Ae -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lnet -lV3" \
+-	 RANLIB=true
+-
+-isc:	# Interactive
+-	$(BUILD) OS=$@ SIGTYPE=sv4 CHECKPW=sv4 LOGINPW=sv4 \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/var/spool/news/active \
+-	 BASECFLAGS="-Xp -D_SYSV3" \
+-	 BASELDFLAGS="-linet -lnsl_s -lgen -lx -lsec -liberty" \
+-	 RANLIB=true
+-
+-lnx:	# Linux non-shadow passwords
+-	@echo You are building for traditional Linux *without* shadow
+-	@echo passwords and with the crypt function in the C library.
+-	@echo If your system has shadow passwords, or if crypt is not
+-	@echo in the C library, you must use slx or sl5 instead!
+-	$(BUILD) OS=$@ SIGTYPE=psx \
+-	 SPOOLDIR=/var/spool \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -O -DNFSKLUDGE"
+-
+-lyn:	# LynxOS
+-	$(BUILD) OS=$@ \
+-	 RSHPATH=/bin/rsh \
+-	 BASECFLAGS="-g -O -pipe -DNFSKLUDGE"
+-	 BASELDFLAGS=-lbsd \
+-	 CC=gcc
+-
+-mct:	# MachTen - NFSKLUDGE doesn't work (at least not on 2.2)
+-	$(BUILD) OS=$@ \
+-	 SPOOLDIR=/var/spool \
+-	 BASECFLAGS="-g -O -pipe"
+-
+-mnt:	# Mint
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-g -O -Dunix=1 -D__atarist__ -D_POSIX_SOURCE -pipe" \
+-	 RSHPATH=/usr/bin/rsh \
+-	 RANLIB=true CC=gcc ARRC="gcc-ar rc"
+-
+-neb:	# NetBSD
+-	$(BUILD) OS=bsi \
+-	 SPOOLDIR=/var \
+-	 ACTIVEFILE=/var/db/news/active \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -O -pipe -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lcrypt"
+-
+-nxt:	# NEXTSTEP
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-g -O -pipe -DNFSKLUDGE"
+-
+-osf:	# OSF/1
+-	$(BUILD) OS=$@ SIGTYPE=psx \
+-	 BASECFLAGS="-g3 -O2 -Olimit 1500 -DNFSKLUDGE"
+-
+-# Note: sia_become_user() used by LOGINPW=os4 doesn't seem to work right.  The
+-# user doesn't get proper file access, and the process can't be killed.
+-
+-os4:	# OSF/1 (Digital UNIX) 4
+-	$(BUILD) OS=$@ SIGTYPE=psx CHECKPW=os4 LOGINPW=sec \
+-	 BASECFLAGS="-g3 -O2 -Olimit 1500 -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lsecurity -ldb -laud -lm"
+-
+-ptx:	# PTX
+-	$(BUILD) OS=$@ SIGTYPE=psx CHECKPW=svo LOGINPW=sv4 \
+-	 MAILSPOOL=/usr/mail \
+-	 RSHPATH=/usr/bin/resh \
+-	 BASECFLAGS="-Wc,-O3 -Wc,-seq -Dprivate=PRIVATE -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lseq -lsec -lsocket -linet -lnsl -lgen" \
+-	 RANLIB=true
+-
+-pyr:	# Pyramid
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-g -Dconst= -DNFSKLUDGE"
+-
+-qnx:	# QNX
+-	$(BUILD) OS=$@ CHECKPW=psx LOGINPW=old \
+-	 RSHPATH=/usr/ucb/rsh \
+-	 BASECFLAGS="-Otax -g -Dunix=1 -D_POSIX_SOURCE" \
+-	 BASELDFLAGS="-g -N128k -llogin -lsocket -lunix"
+-
+-s40:	# SUN-OS 4.0
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-g -Dconst= -DNFSKLUDGE"
+-
+-sc5:	# SCO Open Server 5.0
+-	$(BUILD) OS=$@ SIGTYPE=psx CHECKPW=sec LOGINPW=sec \
+-	 STDPROTO=mmdfproto \
+-	 SPOOLDIR=/var/spool \
+-	 ACTIVEFILE=/var/lib/news/active \
+-	 RSHPATH=/usr/bin/rcmd \
+-	 BASECFLAGS="-O3 -dy -s" \
+-	 BASELDFLAGS="-lsocket -lcrypt -lprot -lx -ltinfo -lm" \
+-	 RANLIB=true
+-
+-sco:	# Santa Cruz Operation
+-	$(BUILD) OS=$@ SIGTYPE=sv4 CHECKPW=sec LOGINPW=sec \
+-	 STDPROTO=mmdfproto \
+-	 RSHPATH=/usr/bin/rcmd \
+-	 BASECFLAGS="-O3" \
+-	 BASELDFLAGS="-lsocket -lprot -lcrypt_i -lx -los" \
+-	 RANLIB=true LN=ln
+-
+-# Note: setting _POSIX_SOURCE doesn't seem to build it as of SGI IRIX 5.3
+-
+-sgi:	# Silicon Graphics
+-	$(BUILD) OS=$@ SIGTYPE=sv4 \
+-	 MAILSPOOL=/usr/mail \
+-	 RSHPATH=/usr/bsd/rsh \
+-	 BASECFLAGS="-g -ansi -DNFSKLUDGE" \
+-	 RANLIB=true
+-
+-# Note: Mark Kaesling says that setluid() isn't in HP-UX with SecureWare.
+-
+-shp:	# HP-UX with Trusted Computer Base
+-	$(BUILD) OS=$@ SIGTYPE=psx CHECKPW=sec LOGINPW=std \
+-	 SPOOLDIR=/var \
+-	 ACTIVEFILE=/var/news/active \
+-	 RSHPATH=/usr/bin/remsh \
+-	 BASECFLAGS="-g -Ae -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lnet -lV3 -lsec" \
+-	 RANLIB=true
+-
+-# Note: KC Smith at Microsoft says that -lcrypt is for glibc
+-
+-slx:	# Secure Linux
+-	@echo You are building for glibc versions of Secure Linux
+-	@echo If you want libc5 versions you must use sl5 instead!
+-	$(BUILD) OS=$@ SIGTYPE=psx CHECKPW=psx \
+-	 SPOOLDIR=/var/spool \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -fno-omit-frame-pointer -O6 -DNFSKLUDGE" \
+-	 BASELDFLAGS="-s -lcrypt"
+-
+-# Note: KC Smith at Microsoft says that -lshadow is for libc5
+-
+-sl5:	# Secure Linux using libc5
+-	$(BUILD) OS=slx SIGTYPE=psx CHECKPW=psx \
+-	 SPOOLDIR=/var/spool \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -fno-omit-frame-pointer -O6 -DNFSKLUDGE" \
+-	 BASELDFLAGS="-s -lshadow"
+-
+-snx:	# Siemens Nixdorf SINIX and Reliant UNIX
+-	$(BUILD) OS=sv4 SIGTYPE=psx CHECKPW=sv4 \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/usr/share/news/active \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -D_SYS_CLOCK_H -Dconst=" \
+-	 BASELDFLAGS="-lsocket -lnsl -lgen" \
+-	 RANLIB=true
+-
+-# Note: It is a long and disgusting story about why cc is set to ucbcc.  You
+-# need to invoke the C compiler so that it links with the SVR4 libraries and
+-# not the BSD libraries, otherwise readdir() will return the wrong information.
+-# Of all the names in the most common path, ucbcc is the only name to be found
+-# (on /usr/ccs/bin) that points to a suitable compiler.  cc is likely to be
+-# /usr/ucb/cc which is absolutely not the compiler that you want.  The real
+-# SVR4 cc is probably something like /opt/SUNWspro/bin/cc which is rarely in
+-# anyone's path.
+-#
+-# ucbcc is probably a link to acc, e.g. /opt/SUNWspro/SC4.0/bin/acc, and is
+-# the UCB C compiler using the SVR4 libraries.
+-#
+-# If ucbcc isn't on your system, then punt on the SUN C compiler and use gcc
+-# instead (the gso port instead of the sol port).
+-# 
+-# If, in spite of all the above warnings, you choose to change "ucbcc" to "cc",
+-# you will probably find that the -O2 needs to be changed to -O.  If you don't
+-# get any error messages with -O2, that's a pretty good indicator that you
+-# goofed and are running the compiler that will link with the BSD libraries.
+-#
+-# To recap:
+-# 1) The sol port is designed to be built using the UCB compiler using the
+-#    SVR4 libraries.  This compiler is "ucbcc", which is lunk to acc.  You
+-#    use -O2 as one of the CFLAGS.
+-# 2) If you build the sol port with the UCB compiler using the BSD libraries,
+-#    you will get no error messages but you will get bad binaries (the most
+-#    obvious symptom is dropping the first two characters return filenames
+-#    from the imapd LIST command.  This compiler also uses -O2, and is very
+-#    often what the user gets from "cc".  BEWARE!!!
+-# 3) If you build the sol port with the real SVR4 compiler, which is often
+-#    hidden away or unavailable on many systems, then you will get errors
+-#    from -O2 and you need to change that to -O.  But you will get a good
+-#    binary.  However, you should try it with -O2 first, to make sure that
+-#    you got this compiler and not the UCB compiler using BSD libraries.
+-
+-sol:	# Solaris
+-	$(BUILD) OS=$@ SIGTYPE=psx CHECKPW=psx \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/usr/share/news/active \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g -O2 -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lsocket -lnsl -lgen" \
+-	 RANLIB=true CC=ucbcc
+-
+-sos:	# Secure OSF/1
+-	$(BUILD) OS=$@ SIGTYPE=psx CHECKPW=sec LOGINPW=sec \
+-	 BASECFLAGS="-g3 -O2 -Olimit 1500 -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lsecurity -laud"
+-
+-ssn:	# Secure SUN-OS
+-	$(BUILD) OS=sun CHECKPW=ssn \
+-	 BASECFLAGS="-g -Dconst= -DNFSKLUDGE" \
+-	 BASELDFLAGS="-ldl"
+-
+-sun:	# SUN-OS
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-g -Dconst= -DNFSKLUDGE" \
+-	 BASELDFLAGS="-ldl"
+-
+-sv2:	# SVR2
+-	@echo You are being *very* optimistic!
+-	$(BUILD) OS=$@ SIGTYPE=sv4 LOGINPW=old \
+-	 MAILSPOOL=/usr/mail \
+-	 RSHPATH=/usr/bin/remsh \
+-	 BASECFLAGS="-Dconst= -DSYSTEM5 -DSHORT_IDENT -I/usr/ethernet/include" \
+-	 BASELDFLAGS="-lnet" \
+-	 RANLIB=true LN=ln
+-
+-sv4:	# SVR4
+-	$(BUILD) OS=$@ SIGTYPE=sv4 CHECKPW=sv4 LOGINPW=sv4 \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/usr/share/news/active \
+-	 RSHPATH=/usr/bin/resh \
+-	 BASECFLAGS="-g -Dconst=" \
+-	 BASELDFLAGS="-lsocket -lnsl -lgen" \
+-	 RANLIB=true
+-
+-ult:	# Ultrix
+-	$(BUILD) OS=$@ SIGTYPE=psx CHECKPW=ult \
+-	 BASECFLAGS="-g3 -O2 -Olimit 1500 -Dconst= -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lauth"
+-
+-uw2:	# UnixWare SVR4.2
+-	$(BUILD) OS=sv4 SIGTYPE=sv4 CHECKPW=sv4 \
+-	 MAILSPOOL=/var/mail NEWSSPOOL=/var/spool/news \
+-	 ACTIVEFILE=/var/news/lib/active \
+-	 RSHPATH=/usr/bin/rsh \
+-	 BASECFLAGS="-g" \
+-	 BASELDFLAGS="-lsocket -lnsl -lgen" \
+-	 RANLIB=true
+-
+-vul:	# VAX Ultrix
+-	$(BUILD) OS=ult SIGTYPE=psx CHECKPW=ult \
+-	 BASECFLAGS="-O2 -Dconst= -DNFSKLUDGE" \
+-	 BASELDFLAGS="-lauth"
+-
+-vu2:	# VAX Ultrix 2.3, etc.
+-	$(BUILD) OS=$@ \
+-	 BASECFLAGS="-O2 -Dconst= -Dvoid=char -DNFSKLUDGE"
+-
+-
+-# Build it!
+-
+-build:	clean once $(ARCHIVE)
+-
+-all:	$(ARCHIVE)
+-
+-$(ARCHIVE): $(BINARIES)
+-	sh -c '$(RM) $(ARCHIVE) || true'
+-	@cat ARCHIVE
+-	@$(SH) ARCHIVE
+-
+-# Cleanup
+-
+-clean:
+-	sh -c '$(RM) auths.c flockbsd.c linkage.[ch] siglocal.c osdep*.[ch] *.o ARCHIVE *FLAGS *TYPE $(ARCHIVE) || true'
+-
+-
+-# Dependencies
+-
+-dummy.o: mail.h misc.h osdep.h dummy.h
+-fdstring.o: mail.h misc.h osdep.h fdstring.h
+-flstring.o: mail.h misc.h osdep.h flstring.h
+-imap4r1.o: mail.h misc.h osdep.h imap4r1.h rfc822.h
+-mail.o: mail.h misc.h osdep.h rfc822.h linkage.h
+-mbox.o: mail.h misc.h osdep.h mbox.h unix.h
+-mbx.o: mail.h misc.h osdep.h mbx.h dummy.h
+-mh.o: mail.h misc.h osdep.h mh.h dummy.h
+-mx.o: mail.h misc.h osdep.h mx.h dummy.h
+-misc.o: mail.h misc.h osdep.h
+-mmdf.o: mail.h misc.h osdep.h mmdf.h pseudo.h dummy.h
+-mtx.o: mail.h misc.h osdep.h mtx.h dummy.h
+-netmsg.o: mail.h misc.h osdep.h netmsg.h
+-news.o: mail.h misc.h osdep.h news.h
+-newsrc.o: mail.h misc.h osdep.h newsrc.h
+-nntp.o: mail.h misc.h osdep.h netmsg.h smtp.h nntp.h rfc822.h
+-phile.o: mail.h misc.h osdep.h phile.h rfc822.h dummy.h
+-pseudo.o: pseudo.h
+-pop3.o: mail.h misc.h osdep.h pop3.h
+-smanager.o: mail.h misc.h osdep.h
+-smtp.o: mail.h misc.h osdep.h smtp.h rfc822.h
+-rfc822.o: mail.h misc.h osdep.h rfc822.h
+-tenex.o: mail.h misc.h osdep.h tenex.h dummy.h
+-unix.o: mail.h misc.h osdep.h unix.h pseudo.h dummy.h
+-utf8.o: mail.h misc.h osdep.h utf8.h
+-
+-
+-# OS-dependent
+-
+-osdep.o:mail.h misc.h env.h fs.h ftl.h nl.h tcp.h \
+-	osdep.h env_unix.h tcp_unix.h \
+-	osdep.c env_unix.c fs_unix.c ftl_unix.c nl_unix.c tcp_unix.c \
+-	auths.c flock.c flockbsd.c flcksafe.c fsync.c gethstid.c \
+-	gr_wait.c gr_wait4.c gr_waitp.c \
+-	auth_gss.c auth_krb.c auth_log.c \
+-	scandir.c setpgrp.c strerror.c truncate.c write.c \
+-	memmove.c memmove2.c memset.c \
+-	tz_bsd.c tz_nul.c tz_sv4.c \
+-	write.c \
+-	strerror.c strpbrk.c strstr.c strtok.c strtoul.c \
+-	OSCFLAGS
+-	$(CC) $(CFLAGS) `cat OSCFLAGS` -c osdep.c
+-
+-osdep.c: osdepbas.c osdepckp.c osdeplog.c
+-	sh -c '$(RM) osdep.c || true'
+-	cat osdepbas.c osdepckp.c osdeplog.c > osdep.c
+-
+-flockbsd.c:	# cretin Linux
+-
+-siglocal.c:	# cretin Linux
+-
+-
+-# Once-only environment setup
+-
+-once:	onceenv ckp$(PASSWDTYPE) osdep.c $(EXTRAAUTHENTICATORS) 
+-
+-onceenv:
+-	@echo Once-only environment setup...
+-	./drivers $(EXTRADRIVERS) $(DEFAULTDRIVERS) dummy
+-	./mkauths $(EXTRAAUTHENTICATORS) $(DEFAULTAUTHENTICATORS)
++all:
++	echo $(CCLIENTOSTYPE) >../OSTYPE
+ 	echo $(CC) > CCTYPE
+-	echo $(CFLAGS) > CFLAGS
+-	echo -DSTDPROTO=$(STDPROTO) -DMAILSPOOL=\"$(MAILSPOOL)\" \
+-	 -DANONYMOUSHOME=\"$(MAILSPOOL)/anonymous\" \
+-	 -DACTIVEFILE=\"$(ACTIVEFILE)\" -DNEWSSPOOL=\"$(NEWSSPOOL)\" \
+-	 -DRSHPATH=\"$(RSHPATH)\" > OSCFLAGS
+-	echo $(BASELDFLAGS) $(EXTRALDFLAGS) > LDFLAGS
+-	echo "$(ARRC) $(ARCHIVE) $(BINARIES);$(RANLIB) $(ARCHIVE)" >> ARCHIVE
+-	$(LN) os_$(OS).h osdep.h
+-	$(LN) os_$(OS).c osdepbas.c
+-	$(LN) log_$(LOGINPW).c osdeplog.c
+-	$(LN) sig_$(SIGTYPE).c siglocal.c
+-	sh -c '(test -f /usr/include/sys/statvfs.h -a $(OS) != sc5 -a $(OS) != sco) && $(LN) flocksun.c flockbsd.c || $(LN) flocksv4.c flockbsd.c'
+-
+-# Password checkers
+-
+-ckpafs:	# AFS
+-	echo $(AFSCFLAGS) >> OSCFLAGS
+-	echo $(AFSLDFLAGS) >> LDFLAGS
+-	$(LN) ckp_afs.c osdepckp.c
++	$(MAKE) -f Makefile.ccl $(CCLIENTOSTYPE)
+ 
+-ckpdce:	# DCE
+-	echo $(DCECFLAGS) >> OSCFLAGS
+-	echo $(DCELDFLAGS) >> LDFLAGS
+-	$(LN) ckp_dce.c osdepckp.c
+-
+-ckpkrb:	# Kerberos IV (must have krb EXTRAAUTHENTICATOR as well)
+-	$(LN) ckp_krb.c osdepckp.c
+-
+-ckpstd:	# Port standard
+-	$(LN) ckp_$(CHECKPW).c osdepckp.c
+-
+-
+-# Authenticators
+-
+-krb:	# Kerberos IV flags
+-	echo $(KRBCFLAGS) >> OSCFLAGS
+-	echo $(KRBLDFLAGS) >> LDFLAGS
+-
+-gss:	# GSSAPI Kerberos V flags
+-	echo $(GSSCFLAGS) >> OSCFLAGS
+-	echo $(GSSLDFLAGS) >> LDFLAGS
++include ../../../makerules
+ 
++clean:
++	$(MAKE) -f Makefile.ccl clean
+ 
+-# A monument to a hack of long ago and far away...
++doc:
++	@echo
++dep depend:
++	@echo
+ 
+-love:
+-	@echo not war?
++include ../../../makeopts
